--- a/Output/tabS10.tex
+++ b/Output/tabS10.tex
@@ -15,255 +15,255 @@ Birth Cohort & 1950 & 1960 & 1970 & 1980 & 1990 & 1999\\
 \endfoot
 \bottomrule
 \endlastfoot
+Australia & 0.92 & 0.93 & 0.95 & 0.96 & 0.96 & 0.97\\
+New Zealand & 0.91 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
 australia\_new zealand & 0.92 (0) & 0.93 (0) & 0.95 (0) & 0.95 (0) & 0.96 (0) & 0.97 (0)\\
-australia & 0.92 & 0.93 & 0.95 & 0.96 & 0.96 & 0.97\\
-new zealand & 0.91 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
 central and southern asia & 0.8 (0.1) & 0.84 (0.1) & 0.86 (0) & 0.9 (0) & 0.92 (0) & 0.92 (0)\\
-afghanistan & 0.75 & 0.78 & 0.82 & 0.86 & 0.88 & 0.9\\
+Afghanistan & 0.75 & 0.78 & 0.82 & 0.86 & 0.88 & 0.9\\
 \addlinespace
-bangladesh & 0.73 & 0.79 & 0.85 & 0.89 & 0.92 & 0.92\\
-bhutan & 0.74 & 0.79 & 0.85 & 0.89 & 0.91 & 0.91\\
-india & 0.77 & 0.81 & 0.85 & 0.88 & 0.91 & 0.92\\
-iran (islamic republic of) & 0.83 & 0.89 & 0.93 & 0.95 & 0.96 & 0.96\\
-kazakhstan & 0.83 & 0.85 & 0.87 & 0.9 & 0.92 & 0.92\\
+Bangladesh & 0.73 & 0.79 & 0.85 & 0.89 & 0.92 & 0.92\\
+Bhutan & 0.74 & 0.79 & 0.85 & 0.89 & 0.91 & 0.91\\
+India & 0.77 & 0.81 & 0.85 & 0.88 & 0.91 & 0.92\\
+Iran (Islamic Republic of) & 0.83 & 0.89 & 0.93 & 0.95 & 0.96 & 0.96\\
+Kazakhstan & 0.83 & 0.85 & 0.87 & 0.9 & 0.92 & 0.92\\
 \addlinespace
-kyrgyzstan & 0.84 & 0.86 & 0.88 & 0.91 & 0.92 & 0.92\\
-maldives & 0.78 & 0.86 & 0.91 & 0.95 & 0.97 & 0.96\\
-nepal & 0.73 & 0.79 & 0.85 & 0.9 & 0.92 & 0.92\\
-pakistan & 0.8 & 0.82 & 0.84 & 0.86 & 0.88 & 0.89\\
-sri lanka & 0.89 & 0.91 & 0.93 & 0.93 & 0.94 & 0.94\\
+Kyrgyzstan & 0.84 & 0.86 & 0.88 & 0.91 & 0.92 & 0.92\\
+Maldives & 0.78 & 0.86 & 0.91 & 0.95 & 0.97 & 0.96\\
+Nepal & 0.73 & 0.79 & 0.85 & 0.9 & 0.92 & 0.92\\
+Pakistan & 0.8 & 0.82 & 0.84 & 0.86 & 0.88 & 0.89\\
+Sri Lanka & 0.89 & 0.91 & 0.93 & 0.93 & 0.94 & 0.94\\
 \addlinespace
-tajikistan & 0.8 & 0.83 & 0.86 & 0.9 & 0.93 & 0.92\\
-turkmenistan & 0.82 & 0.84 & 0.86 & 0.87 & 0.89 & 0.89\\
-uzbekistan & 0.84 & 0.86 & 0.88 & 0.9 & 0.92 & 0.92\\
+Tajikistan & 0.8 & 0.83 & 0.86 & 0.9 & 0.93 & 0.92\\
+Turkmenistan & 0.82 & 0.84 & 0.86 & 0.87 & 0.89 & 0.89\\
+Uzbekistan & 0.84 & 0.86 & 0.88 & 0.9 & 0.92 & 0.92\\
 eastern and south-eastern asia & 0.87 (0.1) & 0.89 (0.1) & 0.89 (0.1) & 0.92 (0) & 0.93 (0) & 0.93 (0)\\
-brunei darussalam & 0.93 & 0.93 & 0.92 & 0.92 & 0.93 & 0.93\\
+Brunei Darussalam & 0.93 & 0.93 & 0.92 & 0.92 & 0.93 & 0.93\\
 \addlinespace
-cambodia & 0.66 & 0.77 & 0.85 & 0.88 & 0.91 & 0.91\\
-china & 0.87 & 0.91 & 0.91 & 0.93 & 0.95 & 0.95\\
-china, hong kong sar & 0.94 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
-china, macao sar & 0.94 & 0.95 & 0.95 & 0.96 & 0.96 & 0.96\\
-china, taiwan province of china & 0.91 & 0.91 & 0.92 & 0.93 & 0.94 & 0.95\\
+Cambodia & 0.66 & 0.77 & 0.85 & 0.88 & 0.91 & 0.91\\
+China & 0.87 & 0.91 & 0.91 & 0.93 & 0.95 & 0.95\\
+China, Hong Kong SAR & 0.94 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
+China, Macao SAR & 0.94 & 0.95 & 0.95 & 0.96 & 0.96 & 0.96\\
+China, Taiwan Province of China & 0.91 & 0.91 & 0.92 & 0.93 & 0.94 & 0.95\\
 \addlinespace
-dem people's republic of korea & 0.89 & 0.89 & 0.87 & 0.9 & 0.93 & 0.93\\
-indonesia & 0.81 & 0.85 & 0.89 & 0.91 & 0.91 & 0.92\\
-japan & 0.93 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
-lao people's democratic republic & 0.75 & 0.79 & 0.83 & 0.87 & 0.9 & 0.92\\
-malaysia & 0.92 & 0.92 & 0.93 & 0.93 & 0.94 & 0.94\\
+Dem. People's Republic of Korea & 0.89 & 0.89 & 0.87 & 0.9 & 0.93 & 0.93\\
+Indonesia & 0.81 & 0.85 & 0.89 & 0.91 & 0.91 & 0.92\\
+Japan & 0.93 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
+Lao People's Democratic Republic & 0.75 & 0.79 & 0.83 & 0.87 & 0.9 & 0.92\\
+Malaysia & 0.92 & 0.92 & 0.93 & 0.93 & 0.94 & 0.94\\
 \addlinespace
-mongolia & 0.8 & 0.82 & 0.87 & 0.92 & 0.92 & 0.92\\
-myanmar & 0.8 & 0.82 & 0.85 & 0.88 & 0.9 & 0.9\\
-philippines & 0.85 & 0.86 & 0.88 & 0.88 & 0.88 & 0.89\\
-republic of korea & 0.92 & 0.93 & 0.94 & 0.96 & 0.96 & 0.97\\
-singapore & 0.94 & 0.95 & 0.95 & 0.95 & 0.96 & 0.96\\
+Mongolia & 0.8 & 0.82 & 0.87 & 0.92 & 0.92 & 0.92\\
+Myanmar & 0.8 & 0.82 & 0.85 & 0.88 & 0.9 & 0.9\\
+Philippines & 0.85 & 0.86 & 0.88 & 0.88 & 0.88 & 0.89\\
+Republic of Korea & 0.92 & 0.93 & 0.94 & 0.96 & 0.96 & 0.97\\
+Singapore & 0.94 & 0.95 & 0.95 & 0.95 & 0.96 & 0.96\\
 \addlinespace
-thailand & 0.85 & 0.87 & 0.89 & 0.9 & 0.92 & 0.92\\
-timor-leste & 0.69 & 0.76 & 0.85 & 0.9 & 0.92 & 0.92\\
-viet nam & 0.87 & 0.88 & 0.88 & 0.89 & 0.9 & 0.91\\
+Thailand & 0.85 & 0.87 & 0.89 & 0.9 & 0.92 & 0.92\\
+Timor-Leste & 0.69 & 0.76 & 0.85 & 0.9 & 0.92 & 0.92\\
+Viet Nam & 0.87 & 0.88 & 0.88 & 0.89 & 0.9 & 0.91\\
 europe and northern america & 0.91 (0) & 0.92 (0) & 0.93 (0) & 0.94 (0) & 0.95 (0) & 0.96 (0)\\
-albania & 0.9 & 0.91 & 0.92 & 0.93 & 0.94 & 0.95\\
+Albania & 0.9 & 0.91 & 0.92 & 0.93 & 0.94 & 0.95\\
 \addlinespace
-austria & 0.91 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
-belarus & 0.88 & 0.86 & 0.87 & 0.9 & 0.92 & 0.92\\
-belgium & 0.91 & 0.92 & 0.94 & 0.95 & 0.95 & 0.96\\
-bosnia and herzegovina & 0.91 & 0.93 & 0.93 & 0.93 & 0.94 & 0.95\\
-bulgaria & 0.9 & 0.87 & 0.88 & 0.91 & 0.92 & 0.93\\
+Austria & 0.91 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
+Belarus & 0.88 & 0.86 & 0.87 & 0.9 & 0.92 & 0.92\\
+Belgium & 0.91 & 0.92 & 0.94 & 0.95 & 0.95 & 0.96\\
+Bosnia and Herzegovina & 0.91 & 0.93 & 0.93 & 0.93 & 0.94 & 0.95\\
+Bulgaria & 0.9 & 0.87 & 0.88 & 0.91 & 0.92 & 0.93\\
 \addlinespace
-canada & 0.92 & 0.94 & 0.95 & 0.95 & 0.96 & 0.96\\
-channel islands & 0.93 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
-croatia & 0.92 & 0.92 & 0.93 & 0.94 & 0.95 & 0.96\\
-czechia & 0.91 & 0.91 & 0.92 & 0.94 & 0.95 & 0.95\\
-denmark & 0.92 & 0.94 & 0.95 & 0.95 & 0.96 & 0.96\\
+Canada & 0.92 & 0.94 & 0.95 & 0.95 & 0.96 & 0.96\\
+Channel Islands & 0.93 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
+Croatia & 0.92 & 0.92 & 0.93 & 0.94 & 0.95 & 0.96\\
+Czechia & 0.91 & 0.91 & 0.92 & 0.94 & 0.95 & 0.95\\
+Denmark & 0.92 & 0.94 & 0.95 & 0.95 & 0.96 & 0.96\\
 \addlinespace
-estonia & 0.9 & 0.88 & 0.89 & 0.92 & 0.93 & 0.94\\
-finland & 0.92 & 0.93 & 0.94 & 0.94 & 0.95 & 0.95\\
-france & 0.9 & 0.92 & 0.93 & 0.94 & 0.94 & 0.95\\
-germany & 0.92 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
-greece & 0.91 & 0.92 & 0.93 & 0.95 & 0.95 & 0.96\\
+Estonia & 0.9 & 0.88 & 0.89 & 0.92 & 0.93 & 0.94\\
+Finland & 0.92 & 0.93 & 0.94 & 0.94 & 0.95 & 0.95\\
+France & 0.9 & 0.92 & 0.93 & 0.94 & 0.94 & 0.95\\
+Germany & 0.92 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
+Greece & 0.91 & 0.92 & 0.93 & 0.95 & 0.95 & 0.96\\
 \addlinespace
-hungary & 0.9 & 0.9 & 0.91 & 0.93 & 0.94 & 0.94\\
-iceland & 0.93 & 0.95 & 0.96 & 0.96 & 0.97 & 0.97\\
-ireland & 0.94 & 0.94 & 0.96 & 0.96 & 0.97 & 0.97\\
-italy & 0.93 & 0.94 & 0.96 & 0.96 & 0.97 & 0.97\\
-latvia & 0.88 & 0.85 & 0.86 & 0.9 & 0.91 & 0.92\\
+Hungary & 0.9 & 0.9 & 0.91 & 0.93 & 0.94 & 0.94\\
+Iceland & 0.93 & 0.95 & 0.96 & 0.96 & 0.97 & 0.97\\
+Ireland & 0.94 & 0.94 & 0.96 & 0.96 & 0.97 & 0.97\\
+Italy & 0.93 & 0.94 & 0.96 & 0.96 & 0.97 & 0.97\\
+Latvia & 0.88 & 0.85 & 0.86 & 0.9 & 0.91 & 0.92\\
 \addlinespace
-lithuania & 0.88 & 0.86 & 0.86 & 0.88 & 0.91 & 0.91\\
-luxembourg & 0.92 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
-malta & 0.94 & 0.94 & 0.95 & 0.95 & 0.96 & 0.96\\
-montenegro & 0.93 & 0.93 & 0.93 & 0.94 & 0.95 & 0.96\\
-netherlands & 0.93 & 0.95 & 0.96 & 0.96 & 0.97 & 0.97\\
+Lithuania & 0.88 & 0.86 & 0.86 & 0.88 & 0.91 & 0.91\\
+Luxembourg & 0.92 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
+Malta & 0.94 & 0.94 & 0.95 & 0.95 & 0.96 & 0.96\\
+Montenegro & 0.93 & 0.93 & 0.93 & 0.94 & 0.95 & 0.96\\
+Netherlands & 0.93 & 0.95 & 0.96 & 0.96 & 0.97 & 0.97\\
 \addlinespace
-north macedonia & 0.9 & 0.91 & 0.93 & 0.94 & 0.95 & 0.95\\
-norway & 0.92 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
-poland & 0.9 & 0.9 & 0.9 & 0.92 & 0.93 & 0.93\\
-portugal & 0.9 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
-republic of moldova & 0.88 & 0.87 & 0.88 & 0.88 & 0.91 & 0.91\\
+North Macedonia & 0.9 & 0.91 & 0.93 & 0.94 & 0.95 & 0.95\\
+Norway & 0.92 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
+Poland & 0.9 & 0.9 & 0.9 & 0.92 & 0.93 & 0.93\\
+Portugal & 0.9 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
+Republic of Moldova & 0.88 & 0.87 & 0.88 & 0.88 & 0.91 & 0.91\\
 \addlinespace
-romania & 0.89 & 0.89 & 0.89 & 0.92 & 0.93 & 0.93\\
-russian federation & 0.86 & 0.82 & 0.84 & 0.87 & 0.89 & 0.9\\
-serbia & 0.9 & 0.91 & 0.92 & 0.93 & 0.94 & 0.95\\
-slovakia & 0.91 & 0.89 & 0.91 & 0.93 & 0.94 & 0.94\\
-slovenia & 0.91 & 0.91 & 0.93 & 0.95 & 0.96 & 0.96\\
+Romania & 0.89 & 0.89 & 0.89 & 0.92 & 0.93 & 0.93\\
+Russian Federation & 0.86 & 0.82 & 0.84 & 0.87 & 0.89 & 0.9\\
+Serbia & 0.9 & 0.91 & 0.92 & 0.93 & 0.94 & 0.95\\
+Slovakia & 0.91 & 0.89 & 0.91 & 0.93 & 0.94 & 0.94\\
+Slovenia & 0.91 & 0.91 & 0.93 & 0.95 & 0.96 & 0.96\\
 \addlinespace
-spain & 0.93 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
-sweden & 0.93 & 0.95 & 0.95 & 0.96 & 0.97 & 0.97\\
-switzerland & 0.93 & 0.95 & 0.95 & 0.96 & 0.97 & 0.97\\
-ukraine & 0.87 & 0.84 & 0.85 & 0.88 & 0.89 & 0.9\\
-united kingdom & 0.91 & 0.93 & 0.94 & 0.95 & 0.95 & 0.96\\
+Spain & 0.93 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
+Sweden & 0.93 & 0.95 & 0.95 & 0.96 & 0.97 & 0.97\\
+Switzerland & 0.93 & 0.95 & 0.95 & 0.96 & 0.97 & 0.97\\
+Ukraine & 0.87 & 0.84 & 0.85 & 0.88 & 0.89 & 0.9\\
+United Kingdom & 0.91 & 0.93 & 0.94 & 0.95 & 0.95 & 0.96\\
 \addlinespace
-united states of america & 0.88 & 0.9 & 0.9 & 0.91 & 0.92 & 0.93\\
+United States of America & 0.88 & 0.9 & 0.9 & 0.91 & 0.92 & 0.93\\
 latin america and the caribbean & 0.88 (0.1) & 0.89 (0) & 0.89 (0) & 0.9 (0) & 0.91 (0) & 0.92 (0)\\
-antigua and barbuda & 0.9 & 0.91 & 0.92 & 0.93 & 0.93 & 0.94\\
-argentina & 0.89 & 0.9 & 0.91 & 0.92 & 0.92 & 0.93\\
-aruba & 0.92 & 0.92 & 0.92 & 0.93 & 0.94 & 0.95\\
+Antigua and Barbuda & 0.9 & 0.91 & 0.92 & 0.93 & 0.93 & 0.94\\
+Argentina & 0.89 & 0.9 & 0.91 & 0.92 & 0.92 & 0.93\\
+Aruba & 0.92 & 0.92 & 0.92 & 0.93 & 0.94 & 0.95\\
 \addlinespace
-bahamas & 0.88 & 0.88 & 0.89 & 0.9 & 0.91 & 0.92\\
-barbados & 0.91 & 0.91 & 0.91 & 0.92 & 0.92 & 0.94\\
-belize & 0.86 & 0.86 & 0.87 & 0.88 & 0.89 & 0.9\\
-bolivia (plurinational state of) & 0.72 & 0.78 & 0.83 & 0.86 & 0.88 & 0.89\\
-brazil & 0.84 & 0.86 & 0.88 & 0.9 & 0.91 & 0.92\\
+Bahamas & 0.88 & 0.88 & 0.89 & 0.9 & 0.91 & 0.92\\
+Barbados & 0.91 & 0.91 & 0.91 & 0.92 & 0.92 & 0.94\\
+Belize & 0.86 & 0.86 & 0.87 & 0.88 & 0.89 & 0.9\\
+Bolivia (Plurinational State of) & 0.72 & 0.78 & 0.83 & 0.86 & 0.88 & 0.89\\
+Brazil & 0.84 & 0.86 & 0.88 & 0.9 & 0.91 & 0.92\\
 \addlinespace
-chile & 0.89 & 0.93 & 0.93 & 0.93 & 0.94 & 0.95\\
-colombia & 0.86 & 0.88 & 0.9 & 0.9 & 0.91 & 0.92\\
-costa rica & 0.9 & 0.92 & 0.92 & 0.92 & 0.93 & 0.93\\
-cuba & 0.9 & 0.91 & 0.92 & 0.92 & 0.92 & 0.93\\
+Chile & 0.89 & 0.93 & 0.93 & 0.93 & 0.94 & 0.95\\
+Colombia & 0.86 & 0.88 & 0.9 & 0.9 & 0.91 & 0.92\\
+Costa Rica & 0.9 & 0.92 & 0.92 & 0.92 & 0.93 & 0.93\\
+Cuba & 0.9 & 0.91 & 0.92 & 0.92 & 0.92 & 0.93\\
 curaçao & 0.9 & 0.91 & 0.91 & 0.92 & 0.93 & 0.94\\
 \addlinespace
-dominican republic & 0.83 & 0.86 & 0.87 & 0.88 & 0.88 & 0.89\\
-ecuador & 0.83 & 0.87 & 0.89 & 0.91 & 0.92 & 0.92\\
-el salvador & 0.78 & 0.83 & 0.87 & 0.89 & 0.88 & 0.89\\
-french guiana & 0.91 & 0.93 & 0.94 & 0.94 & 0.95 & 0.95\\
-grenada & 0.91 & 0.91 & 0.91 & 0.9 & 0.91 & 0.91\\
+Dominican Republic & 0.83 & 0.86 & 0.87 & 0.88 & 0.88 & 0.89\\
+Ecuador & 0.83 & 0.87 & 0.89 & 0.91 & 0.92 & 0.92\\
+El Salvador & 0.78 & 0.83 & 0.87 & 0.89 & 0.88 & 0.89\\
+French Guiana & 0.91 & 0.93 & 0.94 & 0.94 & 0.95 & 0.95\\
+Grenada & 0.91 & 0.91 & 0.91 & 0.9 & 0.91 & 0.91\\
 \addlinespace
-guadeloupe & 0.91 & 0.92 & 0.93 & 0.93 & 0.94 & 0.94\\
-guatemala & 0.8 & 0.85 & 0.87 & 0.89 & 0.9 & 0.91\\
-guyana & 0.81 & 0.82 & 0.83 & 0.84 & 0.85 & 0.86\\
-haiti & 0.77 & 0.79 & 0.81 & 0.83 & 0.85 & 0.86\\
-honduras & 0.82 & 0.86 & 0.88 & 0.89 & 0.9 & 0.91\\
+Guadeloupe & 0.91 & 0.92 & 0.93 & 0.93 & 0.94 & 0.94\\
+Guatemala & 0.8 & 0.85 & 0.87 & 0.89 & 0.9 & 0.91\\
+Guyana & 0.81 & 0.82 & 0.83 & 0.84 & 0.85 & 0.86\\
+Haiti & 0.77 & 0.79 & 0.81 & 0.83 & 0.85 & 0.86\\
+Honduras & 0.82 & 0.86 & 0.88 & 0.89 & 0.9 & 0.91\\
 \addlinespace
-jamaica & 0.9 & 0.9 & 0.9 & 0.9 & 0.91 & 0.92\\
-martinique & 0.91 & 0.93 & 0.94 & 0.94 & 0.95 & 0.95\\
-mexico & 0.87 & 0.89 & 0.89 & 0.9 & 0.91 & 0.91\\
-nicaragua & 0.81 & 0.84 & 0.88 & 0.9 & 0.9 & 0.91\\
-panama & 0.87 & 0.88 & 0.89 & 0.89 & 0.9 & 0.91\\
+Jamaica & 0.9 & 0.9 & 0.9 & 0.9 & 0.91 & 0.92\\
+Martinique & 0.91 & 0.93 & 0.94 & 0.94 & 0.95 & 0.95\\
+Mexico & 0.87 & 0.89 & 0.89 & 0.9 & 0.91 & 0.91\\
+Nicaragua & 0.81 & 0.84 & 0.88 & 0.9 & 0.9 & 0.91\\
+Panama & 0.87 & 0.88 & 0.89 & 0.89 & 0.9 & 0.91\\
 \addlinespace
-paraguay & 0.86 & 0.87 & 0.88 & 0.89 & 0.9 & 0.91\\
-peru & 0.82 & 0.86 & 0.9 & 0.92 & 0.93 & 0.93\\
-puerto rico & 0.89 & 0.89 & 0.89 & 0.9 & 0.91 & 0.92\\
-saint lucia & 0.91 & 0.92 & 0.9 & 0.9 & 0.91 & 0.92\\
-saint vincent and the grenadines & 0.88 & 0.9 & 0.9 & 0.89 & 0.89 & 0.9\\
+Paraguay & 0.86 & 0.87 & 0.88 & 0.89 & 0.9 & 0.91\\
+Peru & 0.82 & 0.86 & 0.9 & 0.92 & 0.93 & 0.93\\
+Puerto Rico & 0.89 & 0.89 & 0.89 & 0.9 & 0.91 & 0.92\\
+Saint Lucia & 0.91 & 0.92 & 0.9 & 0.9 & 0.91 & 0.92\\
+Saint Vincent and the Grenadines & 0.88 & 0.9 & 0.9 & 0.89 & 0.89 & 0.9\\
 \addlinespace
-suriname & 0.85 & 0.86 & 0.88 & 0.89 & 0.9 & 0.9\\
-trinidad and tobago & 0.88 & 0.88 & 0.88 & 0.89 & 0.89 & 0.91\\
-united states virgin islands & 0.92 & 0.93 & 0.94 & 0.95 & 0.95 & 0.96\\
-uruguay & 0.88 & 0.89 & 0.91 & 0.92 & 0.92 & 0.93\\
-venezuela (bolivarian republic of) & 0.88 & 0.88 & 0.88 & 0.88 & 0.88 & 0.88\\
+Suriname & 0.85 & 0.86 & 0.88 & 0.89 & 0.9 & 0.9\\
+Trinidad and Tobago & 0.88 & 0.88 & 0.88 & 0.89 & 0.89 & 0.91\\
+United States Virgin Islands & 0.92 & 0.93 & 0.94 & 0.95 & 0.95 & 0.96\\
+Uruguay & 0.88 & 0.89 & 0.91 & 0.92 & 0.92 & 0.93\\
+Venezuela (Bolivarian Republic of) & 0.88 & 0.88 & 0.88 & 0.88 & 0.88 & 0.88\\
 \addlinespace
 northern africa and western asia & 0.87 (0.1) & 0.91 (0.1) & 0.93 (0.1) & 0.94 (0) & 0.94 (0) & 0.95 (0)\\
-algeria & 0.82 & 0.89 & 0.93 & 0.94 & 0.94 & 0.94\\
-armenia & 0.87 & 0.88 & 0.88 & 0.9 & 0.92 & 0.93\\
-azerbaijan & 0.83 & 0.85 & 0.87 & 0.9 & 0.92 & 0.92\\
-bahrain & 0.93 & 0.95 & 0.95 & 0.95 & 0.95 & 0.95\\
+Algeria & 0.82 & 0.89 & 0.93 & 0.94 & 0.94 & 0.94\\
+Armenia & 0.87 & 0.88 & 0.88 & 0.9 & 0.92 & 0.93\\
+Azerbaijan & 0.83 & 0.85 & 0.87 & 0.9 & 0.92 & 0.92\\
+Bahrain & 0.93 & 0.95 & 0.95 & 0.95 & 0.95 & 0.95\\
 \addlinespace
-cyprus & 0.94 & 0.95 & 0.95 & 0.95 & 0.96 & 0.96\\
-egypt & 0.78 & 0.85 & 0.91 & 0.93 & 0.93 & 0.93\\
-georgia & 0.86 & 0.87 & 0.86 & 0.89 & 0.91 & 0.92\\
-iraq & 0.88 & 0.9 & 0.9 & 0.9 & 0.91 & 0.91\\
-israel & 0.93 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
+Cyprus & 0.94 & 0.95 & 0.95 & 0.95 & 0.96 & 0.96\\
+Egypt & 0.78 & 0.85 & 0.91 & 0.93 & 0.93 & 0.93\\
+Georgia & 0.86 & 0.87 & 0.86 & 0.89 & 0.91 & 0.92\\
+Iraq & 0.88 & 0.9 & 0.9 & 0.9 & 0.91 & 0.91\\
+Israel & 0.93 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
 \addlinespace
-jordan & 0.91 & 0.92 & 0.93 & 0.93 & 0.93 & 0.94\\
-kuwait & 0.93 & 0.95 & 0.96 & 0.95 & 0.96 & 0.96\\
-lebanon & 0.91 & 0.92 & 0.94 & 0.95 & 0.96 & 0.96\\
-libya & 0.89 & 0.92 & 0.92 & 0.93 & 0.94 & 0.94\\
-morocco & 0.82 & 0.87 & 0.92 & 0.94 & 0.95 & 0.96\\
+Jordan & 0.91 & 0.92 & 0.93 & 0.93 & 0.93 & 0.94\\
+Kuwait & 0.93 & 0.95 & 0.96 & 0.95 & 0.96 & 0.96\\
+Lebanon & 0.91 & 0.92 & 0.94 & 0.95 & 0.96 & 0.96\\
+Libya & 0.89 & 0.92 & 0.92 & 0.93 & 0.94 & 0.94\\
+Morocco & 0.82 & 0.87 & 0.92 & 0.94 & 0.95 & 0.96\\
 \addlinespace
-oman & 0.86 & 0.91 & 0.94 & 0.95 & 0.95 & 0.95\\
-qatar & 0.93 & 0.95 & 0.95 & 0.96 & 0.96 & 0.96\\
-saudi arabia & 0.86 & 0.92 & 0.94 & 0.95 & 0.95 & 0.96\\
-state of palestine & 0.88 & 0.91 & 0.93 & 0.93 & 0.93 & 0.94\\
-sudan & 0.77 & 0.79 & 0.82 & 0.85 & 0.88 & 0.89\\
+Oman & 0.86 & 0.91 & 0.94 & 0.95 & 0.95 & 0.95\\
+Qatar & 0.93 & 0.95 & 0.95 & 0.96 & 0.96 & 0.96\\
+Saudi Arabia & 0.86 & 0.92 & 0.94 & 0.95 & 0.95 & 0.96\\
+State of Palestine & 0.88 & 0.91 & 0.93 & 0.93 & 0.93 & 0.94\\
+Sudan & 0.77 & 0.79 & 0.82 & 0.85 & 0.88 & 0.89\\
 \addlinespace
-syrian arab republic & 0.89 & 0.9 & 0.92 & 0.94 & 0.95 & 0.95\\
-tunisia & 0.86 & 0.92 & 0.94 & 0.95 & 0.95 & 0.95\\
-turkey & 0.77 & 0.84 & 0.89 & 0.93 & 0.94 & 0.95\\
-united arab emirates & 0.92 & 0.95 & 0.95 & 0.95 & 0.95 & 0.97\\
-western sahara & 0.75 & 0.83 & 0.88 & 0.91 & 0.93 & 0.94\\
+Syrian Arab Republic & 0.89 & 0.9 & 0.92 & 0.94 & 0.95 & 0.95\\
+Tunisia & 0.86 & 0.92 & 0.94 & 0.95 & 0.95 & 0.95\\
+Turkey & 0.77 & 0.84 & 0.89 & 0.93 & 0.94 & 0.95\\
+United Arab Emirates & 0.92 & 0.95 & 0.95 & 0.95 & 0.95 & 0.97\\
+Western Sahara & 0.75 & 0.83 & 0.88 & 0.91 & 0.93 & 0.94\\
 \addlinespace
-yemen & 0.78 & 0.83 & 0.86 & 0.88 & 0.89 & 0.9\\
+Yemen & 0.78 & 0.83 & 0.86 & 0.88 & 0.89 & 0.9\\
+Fiji & 0.87 & 0.88 & 0.89 & 0.9 & 0.9 & 0.9\\
+French Polynesia & 0.89 & 0.92 & 0.94 & 0.94 & 0.94 & 0.94\\
+Guam & 0.91 & 0.93 & 0.93 & 0.94 & 0.95 & 0.95\\
+Kiribati & 0.82 & 0.84 & 0.86 & 0.88 & 0.89 & 0.9\\
+\addlinespace
+Micronesia (Fed. States of) & 0.89 & 0.89 & 0.9 & 0.9 & 0.92 & 0.93\\
+New Caledonia & 0.9 & 0.92 & 0.93 & 0.94 & 0.95 & 0.95\\
+Papua New Guinea & 0.84 & 0.85 & 0.86 & 0.88 & 0.89 & 0.9\\
+Samoa & 0.9 & 0.92 & 0.94 & 0.93 & 0.93 & 0.94\\
+Solomon Islands & 0.89 & 0.91 & 0.92 & 0.91 & 0.91 & 0.92\\
+\addlinespace
+Tonga & 0.92 & 0.92 & 0.92 & 0.92 & 0.92 & 0.92\\
+Vanuatu & 0.88 & 0.92 & 0.93 & 0.93 & 0.92 & 0.93\\
 oceania (exc. Aus and NZ) & 0.89 (0) & 0.92 (0) & 0.92 (0) & 0.92 (0) & 0.92 (0) & 0.93 (0)\\
-fiji & 0.87 & 0.88 & 0.89 & 0.9 & 0.9 & 0.9\\
-french polynesia & 0.89 & 0.92 & 0.94 & 0.94 & 0.94 & 0.94\\
-guam & 0.91 & 0.93 & 0.93 & 0.94 & 0.95 & 0.95\\
-\addlinespace
-kiribati & 0.82 & 0.84 & 0.86 & 0.88 & 0.89 & 0.9\\
-micronesia (fed states of) & 0.89 & 0.89 & 0.9 & 0.9 & 0.92 & 0.93\\
-new caledonia & 0.9 & 0.92 & 0.93 & 0.94 & 0.95 & 0.95\\
-papua new guinea & 0.84 & 0.85 & 0.86 & 0.88 & 0.89 & 0.9\\
-samoa & 0.9 & 0.92 & 0.94 & 0.93 & 0.93 & 0.94\\
-\addlinespace
-solomon islands & 0.89 & 0.91 & 0.92 & 0.91 & 0.91 & 0.92\\
-tonga & 0.92 & 0.92 & 0.92 & 0.92 & 0.92 & 0.92\\
-vanuatu & 0.88 & 0.92 & 0.93 & 0.93 & 0.92 & 0.93\\
 sub-saharan africa & 0.76 (0.1) & 0.77 (0.1) & 0.79 (0.1) & 0.84 (0.1) & 0.88 (0) & 0.89 (0)\\
-angola & 0.71 & 0.7 & 0.74 & 0.8 & 0.86 & 0.89\\
+Angola & 0.71 & 0.7 & 0.74 & 0.8 & 0.86 & 0.89\\
 \addlinespace
-benin & 0.73 & 0.75 & 0.78 & 0.81 & 0.84 & 0.85\\
-botswana & 0.83 & 0.86 & 0.87 & 0.86 & 0.88 & 0.9\\
-burkina faso & 0.74 & 0.74 & 0.76 & 0.81 & 0.87 & 0.89\\
-burundi & 0.74 & 0.75 & 0.78 & 0.83 & 0.88 & 0.89\\
-cabo verde & 0.86 & 0.89 & 0.9 & 0.91 & 0.92 & 0.92\\
+Benin & 0.73 & 0.75 & 0.78 & 0.81 & 0.84 & 0.85\\
+Botswana & 0.83 & 0.86 & 0.87 & 0.86 & 0.88 & 0.9\\
+Burkina Faso & 0.74 & 0.74 & 0.76 & 0.81 & 0.87 & 0.89\\
+Burundi & 0.74 & 0.75 & 0.78 & 0.83 & 0.88 & 0.89\\
+Cabo Verde & 0.86 & 0.89 & 0.9 & 0.91 & 0.92 & 0.92\\
 \addlinespace
-cameroon & 0.76 & 0.77 & 0.78 & 0.81 & 0.85 & 0.87\\
-central african republic & 0.77 & 0.77 & 0.75 & 0.77 & 0.8 & 0.83\\
-chad & 0.7 & 0.72 & 0.74 & 0.76 & 0.79 & 0.81\\
-comoros & 0.78 & 0.82 & 0.85 & 0.86 & 0.88 & 0.89\\
-congo & 0.82 & 0.82 & 0.83 & 0.85 & 0.89 & 0.9\\
+Cameroon & 0.76 & 0.77 & 0.78 & 0.81 & 0.85 & 0.87\\
+Central African Republic & 0.77 & 0.77 & 0.75 & 0.77 & 0.8 & 0.83\\
+Chad & 0.7 & 0.72 & 0.74 & 0.76 & 0.79 & 0.81\\
+Comoros & 0.78 & 0.82 & 0.85 & 0.86 & 0.88 & 0.89\\
+Congo & 0.82 & 0.82 & 0.83 & 0.85 & 0.89 & 0.9\\
 \addlinespace
 côte d'ivoire & 0.81 & 0.79 & 0.79 & 0.81 & 0.84 & 0.86\\
-democratic republic of the congo & 0.71 & 0.73 & 0.76 & 0.8 & 0.83 & 0.85\\
-djibouti & 0.79 & 0.81 & 0.83 & 0.86 & 0.89 & 0.91\\
-equatorial guinea & 0.72 & 0.75 & 0.78 & 0.81 & 0.84 & 0.86\\
-eritrea & 0.76 & 0.78 & 0.85 & 0.9 & 0.91 & 0.91\\
+Democratic Republic of the Congo & 0.71 & 0.73 & 0.76 & 0.8 & 0.83 & 0.85\\
+Djibouti & 0.79 & 0.81 & 0.83 & 0.86 & 0.89 & 0.91\\
+Equatorial Guinea & 0.72 & 0.75 & 0.78 & 0.81 & 0.84 & 0.86\\
+Eritrea & 0.76 & 0.78 & 0.85 & 0.9 & 0.91 & 0.91\\
 \addlinespace
-eswatini & 0.82 & 0.83 & 0.84 & 0.82 & 0.85 & 0.88\\
-ethiopia & 0.72 & 0.73 & 0.79 & 0.86 & 0.89 & 0.9\\
-gabon & 0.8 & 0.83 & 0.85 & 0.86 & 0.88 & 0.9\\
-gambia & 0.74 & 0.78 & 0.82 & 0.85 & 0.88 & 0.89\\
-ghana & 0.78 & 0.8 & 0.83 & 0.86 & 0.89 & 0.9\\
+Eswatini & 0.82 & 0.83 & 0.84 & 0.82 & 0.85 & 0.88\\
+Ethiopia & 0.72 & 0.73 & 0.79 & 0.86 & 0.89 & 0.9\\
+Gabon & 0.8 & 0.83 & 0.85 & 0.86 & 0.88 & 0.9\\
+Gambia & 0.74 & 0.78 & 0.82 & 0.85 & 0.88 & 0.89\\
+Ghana & 0.78 & 0.8 & 0.83 & 0.86 & 0.89 & 0.9\\
 \addlinespace
-guinea & 0.69 & 0.72 & 0.76 & 0.82 & 0.87 & 0.88\\
-guinea-bissau & 0.71 & 0.73 & 0.76 & 0.81 & 0.86 & 0.87\\
-kenya & 0.8 & 0.81 & 0.83 & 0.86 & 0.89 & 0.9\\
-lesotho & 0.8 & 0.82 & 0.82 & 0.8 & 0.82 & 0.86\\
-liberia & 0.7 & 0.7 & 0.74 & 0.83 & 0.88 & 0.89\\
+Guinea & 0.69 & 0.72 & 0.76 & 0.82 & 0.87 & 0.88\\
+Guinea-Bissau & 0.71 & 0.73 & 0.76 & 0.81 & 0.86 & 0.87\\
+Kenya & 0.8 & 0.81 & 0.83 & 0.86 & 0.89 & 0.9\\
+Lesotho & 0.8 & 0.82 & 0.82 & 0.8 & 0.82 & 0.86\\
+Liberia & 0.7 & 0.7 & 0.74 & 0.83 & 0.88 & 0.89\\
 \addlinespace
-madagascar & 0.74 & 0.77 & 0.82 & 0.87 & 0.9 & 0.91\\
-malawi & 0.72 & 0.74 & 0.78 & 0.85 & 0.89 & 0.91\\
-mali & 0.73 & 0.74 & 0.74 & 0.79 & 0.84 & 0.86\\
-mauritania & 0.79 & 0.82 & 0.84 & 0.85 & 0.87 & 0.88\\
-mauritius & 0.89 & 0.9 & 0.91 & 0.9 & 0.91 & 0.92\\
+Madagascar & 0.74 & 0.77 & 0.82 & 0.87 & 0.9 & 0.91\\
+Malawi & 0.72 & 0.74 & 0.78 & 0.85 & 0.89 & 0.91\\
+Mali & 0.73 & 0.74 & 0.74 & 0.79 & 0.84 & 0.86\\
+Mauritania & 0.79 & 0.82 & 0.84 & 0.85 & 0.87 & 0.88\\
+Mauritius & 0.89 & 0.9 & 0.91 & 0.9 & 0.91 & 0.92\\
 \addlinespace
-mayotte & 0.92 & 0.92 & 0.93 & 0.93 & 0.93 & 0.93\\
-mozambique & 0.68 & 0.71 & 0.76 & 0.83 & 0.88 & 0.9\\
-namibia & 0.84 & 0.84 & 0.86 & 0.88 & 0.88 & 0.9\\
-niger & 0.64 & 0.65 & 0.72 & 0.81 & 0.87 & 0.89\\
-nigeria & 0.74 & 0.72 & 0.73 & 0.78 & 0.82 & 0.84\\
+Mayotte & 0.92 & 0.92 & 0.93 & 0.93 & 0.93 & 0.93\\
+Mozambique & 0.68 & 0.71 & 0.76 & 0.83 & 0.88 & 0.9\\
+Namibia & 0.84 & 0.84 & 0.86 & 0.88 & 0.88 & 0.9\\
+Niger & 0.64 & 0.65 & 0.72 & 0.81 & 0.87 & 0.89\\
+Nigeria & 0.74 & 0.72 & 0.73 & 0.78 & 0.82 & 0.84\\
 \addlinespace
 réunion & 0.91 & 0.93 & 0.93 & 0.93 & 0.93 & 0.94\\
-rwanda & 0.65 & 0.63 & 0.71 & 0.87 & 0.94 & 0.93\\
-sao tome and principe & 0.83 & 0.84 & 0.86 & 0.89 & 0.92 & 0.92\\
-senegal & 0.73 & 0.79 & 0.83 & 0.88 & 0.91 & 0.92\\
-seychelles & 0.88 & 0.9 & 0.9 & 0.9 & 0.9 & 0.91\\
+Rwanda & 0.65 & 0.63 & 0.71 & 0.87 & 0.94 & 0.93\\
+Sao Tome and Principe & 0.83 & 0.84 & 0.86 & 0.89 & 0.92 & 0.92\\
+Senegal & 0.73 & 0.79 & 0.83 & 0.88 & 0.91 & 0.92\\
+Seychelles & 0.88 & 0.9 & 0.9 & 0.9 & 0.9 & 0.91\\
 \addlinespace
-sierra leone & 0.77 & 0.74 & 0.72 & 0.77 & 0.82 & 0.85\\
-somalia & 0.74 & 0.74 & 0.76 & 0.79 & 0.81 & 0.83\\
-south africa & 0.83 & 0.84 & 0.86 & 0.86 & 0.87 & 0.89\\
-south sudan & 0.73 & 0.72 & 0.76 & 0.81 & 0.84 & 0.85\\
-togo & 0.77 & 0.78 & 0.8 & 0.83 & 0.86 & 0.88\\
+Sierra Leone & 0.77 & 0.74 & 0.72 & 0.77 & 0.82 & 0.85\\
+Somalia & 0.74 & 0.74 & 0.76 & 0.79 & 0.81 & 0.83\\
+South Africa & 0.83 & 0.84 & 0.86 & 0.86 & 0.87 & 0.89\\
+South Sudan & 0.73 & 0.72 & 0.76 & 0.81 & 0.84 & 0.85\\
+Togo & 0.77 & 0.78 & 0.8 & 0.83 & 0.86 & 0.88\\
 \addlinespace
-uganda & 0.75 & 0.75 & 0.79 & 0.84 & 0.88 & 0.89\\
-united republic of tanzania & 0.75 & 0.77 & 0.81 & 0.86 & 0.89 & 0.9\\
-zambia & 0.76 & 0.75 & 0.78 & 0.84 & 0.89 & 0.9\\
-zimbabwe & 0.81 & 0.81 & 0.84 & 0.84 & 0.87 & 0.89\\*
+Uganda & 0.75 & 0.75 & 0.79 & 0.84 & 0.88 & 0.89\\
+United Republic of Tanzania & 0.75 & 0.77 & 0.81 & 0.86 & 0.89 & 0.9\\
+Zambia & 0.76 & 0.75 & 0.78 & 0.84 & 0.89 & 0.9\\
+Zimbabwe & 0.81 & 0.81 & 0.84 & 0.84 & 0.87 & 0.89\\*
 \end{longtable}
 \endgroup{}
