--- a/Output/tabS5.tex
+++ b/Output/tabS5.tex
@@ -1,273 +1,230 @@
 \begingroup\fontsize{7}{9}\selectfont
 
-\begin{longtable}[t]{llllllllll}
-\caption{\label{tab:S5}Full country results for the cumulative number of child deaths for a woman surviving to ages 20, 45, and 100. Regional estimates show the median value and IQR in parenthesis.}\\
+\begin{longtable}[t]{lllllll}
+\caption{\label{tab:S5}Number of children expected to live longer than their mothers (E[CS]), asuming the latter 
+survive to the mean age at death in their cohort and country of birth. 
+Regional estimates (capitalized) for six cohorts show the median value and IQR in parenthesis.}\\
 \toprule
-\multicolumn{1}{c}{Birth cohort} & \multicolumn{3}{c}{1950} & \multicolumn{3}{c}{1975} & \multicolumn{3}{c}{1999} \\
-\cmidrule(l{3pt}r{3pt}){1-1} \cmidrule(l{3pt}r{3pt}){2-4} \cmidrule(l{3pt}r{3pt}){5-7} \cmidrule(l{3pt}r{3pt}){8-10}
-Age & 20 & 45 & 100 & 20 & 45 & 100 & 20 & 45 & 100\\
+Birth Cohort & 1950 & 1960 & 1970 & 1980 & 1990 & 1999\\
 \midrule
 \endfirsthead
-\caption[]{Full country results for the cumulative number of child deaths for a woman surviving to ages 20, 45, and 100. Regional estimates show the median value and IQR in parenthesis. \textit{(continued)}}\\
+\caption[]{Number of children expected to live longer than their mothers (E[CS]), asuming the latt \textit{(continued)}}\\
 \toprule
-\multicolumn{1}{c}{Birth cohort} & \multicolumn{3}{c}{1950} & \multicolumn{3}{c}{1975} & \multicolumn{3}{c}{1999} \\
-\cmidrule(l{3pt}r{3pt}){1-1} \cmidrule(l{3pt}r{3pt}){2-4} \cmidrule(l{3pt}r{3pt}){5-7} \cmidrule(l{3pt}r{3pt}){8-10}
-Age & 20 & 45 & 100 & 20 & 45 & 100 & 20 & 45 & 100\\
+Birth Cohort & 1950 & 1960 & 1970 & 1980 & 1990 & 1999\\
 \midrule
 \endhead
 \
 \endfoot
 \bottomrule
 \endlastfoot
-Australia/New Zealand & 0.01 (0) & 0.07 (0) & 0.55 (0.1) & 0 (0) & 0.02 (0) & 0.23 (0) & 0 (0) & 0.01 (0) & 0.12 (0)\\
-Australia & 0.01 & 0.06 & 0.49 & <0.01 & 0.02 & 0.21 & <0.01 & 0.01 & 0.1\\
-New Zealand & 0.02 & 0.08 & 0.62 & <0.01 & 0.02 & 0.26 & <0.01 & 0.01 & 0.13\\
-Central and Southern Asia & 0.23 (0.2) & 1.04 (0.8) & 2.76 (0.9) & 0.09 (0.1) & 0.3 (0.2) & 1.43 (0.6) & 0.02 (0) & 0.06 (0.1) & 0.73 (0.5)\\
-Afghanistan & 0.41 & 2.19 & 4.61 & 0.21 & 0.95 & 3.36 & 0.06 & 0.23 & 1.5\\
-\addlinespace
-Bangladesh & 0.37 & 1.47 & 3.12 & 0.12 & 0.32 & 1.17 & 0.02 & 0.06 & 0.51\\
-Bhutan & 0.31 & 1.7 & 3.42 & 0.11 & 0.34 & 1.35 & 0.01 & 0.06 & 0.52\\
-India & 0.23 & 1 & 2.65 & 0.11 & 0.35 & 1.56 & 0.02 & 0.09 & 0.79\\
-Iran (Islamic Republic of) & 0.25 & 0.97 & 2.31 & 0.03 & 0.1 & 0.59 & 0.01 & 0.03 & 0.32\\
-Kazakhstan & 0.07 & 0.33 & 1.54 & 0.04 & 0.13 & 0.93 & 0.01 & 0.03 & 0.68\\
-\addlinespace
-Kyrgyzstan & 0.12 & 0.52 & 2.28 & 0.06 & 0.18 & 1.34 & 0.01 & 0.06 & 0.88\\
-Maldives & 0.44 & 1.47 & 2.64 & 0.07 & 0.16 & 0.68 & <0.01 & 0.01 & 0.21\\
-Nepal & 0.31 & 1.42 & 2.97 & 0.13 & 0.36 & 1.52 & 0.02 & 0.06 & 0.58\\
-Pakistan & 0.22 & 1.23 & 3.52 & 0.12 & 0.57 & 2.34 & 0.05 & 0.23 & 1.36\\
-Sri Lanka & 0.05 & 0.25 & 1.21 & 0.01 & 0.05 & 0.5 & <0.01 & 0.02 & 0.34\\
-\addlinespace
-Tajikistan & 0.2 & 1.08 & 3.31 & 0.11 & 0.36 & 1.65 & 0.03 & 0.1 & 1.12\\
-Turkmenistan & 0.13 & 0.71 & 2.87 & 0.06 & 0.27 & 1.57 & 0.03 & 0.14 & 1.14\\
-Uzbekistan & 0.12 & 0.6 & 2.57 & 0.07 & 0.22 & 1.5 & 0.02 & 0.07 & 0.86\\
-Eastern and South-Eastern Asia & 0.06 (0.1) & 0.34 (0.7) & 1.6 (1.9) & 0.01 (0) & 0.08 (0.2) & 0.69 (0.9) & 0 (0) & 0.02 (0.1) & 0.33 (0.6)\\
-Brunei Darussalam & 0.06 & 0.22 & 1.73 & 0.01 & 0.04 & 0.61 & <0.01 & 0.02 & 0.33\\
-\addlinespace
-Cambodia & 0.19 & 1.98 & 3.54 & 0.1 & 0.39 & 1.52 & 0.02 & 0.08 & 0.79\\
-China & 0.11 & 0.35 & 1.35 & 0.02 & 0.08 & 0.52 & <0.01 & 0.02 & 0.32\\
-China, Hong Kong SAR & 0.01 & 0.06 & 0.45 & <0.01 & 0.01 & 0.12 & <0.01 & <0.01 & 0.09\\
-China, Macao SAR & 0.01 & 0.05 & 0.26 & <0.01 & 0.01 & 0.11 & <0.01 & 0.01 & 0.09\\
-China, Taiwan Province of China & 0.03 & 0.11 & 0.85 & <0.01 & 0.02 & 0.3 & <0.01 & 0.01 & 0.14\\
-\addlinespace
-Dem. People's Republic of Korea & 0.03 & 0.19 & 1.29 & 0.01 & 0.13 & 0.71 & <0.01 & 0.04 & 0.43\\
-Indonesia & 0.21 & 0.76 & 2.4 & 0.04 & 0.16 & 0.93 & 0.01 & 0.06 & 0.59\\
-Japan & 0.01 & 0.04 & 0.37 & <0.01 & 0.01 & 0.15 & <0.01 & <0.01 & 0.09\\
-Lao People's Democratic Republic & 0.24 & 1.41 & 3.45 & 0.14 & 0.48 & 1.84 & 0.03 & 0.11 & 0.89\\
-Malaysia & 0.05 & 0.21 & 1.6 & 0.01 & 0.04 & 0.69 & <0.01 & 0.02 & 0.33\\
-\addlinespace
-Mongolia & 0.14 & 0.97 & 2.95 & 0.05 & 0.17 & 1.11 & 0.01 & 0.06 & 0.79\\
-Myanmar & 0.17 & 0.94 & 2.96 & 0.05 & 0.26 & 1.28 & 0.02 & 0.1 & 0.77\\
-Philippines & 0.07 & 0.49 & 2.37 & 0.03 & 0.18 & 1.39 & 0.01 & 0.08 & 0.72\\
-Republic of Korea & 0.04 & 0.18 & 0.7 & <0.01 & 0.02 & 0.2 & <0.01 & <0.01 & 0.07\\
-Singapore & 0.01 & 0.06 & 0.49 & <0.01 & 0.01 & 0.17 & <0.01 & <0.01 & 0.09\\
-\addlinespace
-Thailand & 0.08 & 0.34 & 1.33 & 0.01 & 0.06 & 0.47 & <0.01 & 0.02 & 0.28\\
-Timor-Leste & 0.25 & 1.89 & 3.32 & 0.14 & 0.59 & 2.23 & 0.03 & 0.15 & 1.07\\
-Viet Nam & 0.05 & 0.41 & 1.75 & 0.02 & 0.1 & 0.7 & 0.01 & 0.06 & 0.53\\
-Europe and Northern America & 0.01 (0) & 0.07 (0) & 0.59 (0.4) & 0 (0) & 0.02 (0) & 0.28 (0.3) & 0 (0) & 0.01 (0) & 0.16 (0.2)\\
-Albania & 0.08 & 0.3 & 1.24 & 0.02 & 0.07 & 0.51 & <0.01 & 0.02 & 0.25\\
-\addlinespace
-Austria & 0.02 & 0.06 & 0.48 & <0.01 & 0.01 & 0.23 & <0.01 & 0.01 & 0.13\\
-Belarus & 0.01 & 0.08 & 0.9 & 0.01 & 0.03 & 0.56 & <0.01 & 0.01 & 0.42\\
-Belgium & 0.01 & 0.05 & 0.47 & <0.01 & 0.02 & 0.26 & <0.01 & 0.01 & 0.14\\
-Bosnia and Herzegovina & 0.05 & 0.15 & 0.9 & 0.01 & 0.03 & 0.42 & <0.01 & 0.01 & 0.2\\
-Bulgaria & 0.03 & 0.08 & 0.95 & 0.01 & 0.04 & 0.54 & <0.01 & 0.02 & 0.38\\
-\addlinespace
-Canada & 0.01 & 0.05 & 0.45 & <0.01 & 0.02 & 0.22 & <0.01 & 0.01 & 0.11\\
-Channel Islands & 0.01 & 0.05 & 0.35 & <0.01 & 0.02 & 0.19 & <0.01 & 0.01 & 0.12\\
-Croatia & 0.02 & 0.07 & 0.64 & <0.01 & 0.02 & 0.36 & <0.01 & 0.01 & 0.18\\
-Czechia & 0.02 & 0.06 & 0.7 & <0.01 & 0.02 & 0.36 & <0.01 & 0.01 & 0.21\\
-Denmark & 0.01 & 0.04 & 0.53 & <0.01 & 0.01 & 0.29 & <0.01 & 0.01 & 0.16\\
-\addlinespace
-Estonia & 0.01 & 0.08 & 0.69 & 0.01 & 0.03 & 0.43 & <0.01 & 0.01 & 0.25\\
-Finland & 0.01 & 0.03 & 0.41 & <0.01 & 0.01 & 0.25 & <0.01 & <0.01 & 0.12\\
-France & 0.01 & 0.05 & 0.5 & <0.01 & 0.02 & 0.26 & <0.01 & 0.01 & 0.16\\
-Germany & 0.01 & 0.05 & 0.45 & <0.01 & 0.01 & 0.22 & <0.01 & 0.01 & 0.14\\
-Greece & 0.02 & 0.07 & 0.53 & <0.01 & 0.01 & 0.21 & <0.01 & 0.01 & 0.11\\
-\addlinespace
-Hungary & 0.03 & 0.08 & 0.81 & 0.01 & 0.02 & 0.46 & <0.01 & 0.01 & 0.27\\
-Iceland & 0.01 & 0.05 & 0.57 & <0.01 & 0.01 & 0.25 & <0.01 & <0.01 & 0.1\\
-Ireland & 0.01 & 0.07 & 0.6 & <0.01 & 0.02 & 0.21 & <0.01 & 0.01 & 0.1\\
-Italy & 0.02 & 0.06 & 0.4 & <0.01 & 0.01 & 0.13 & <0.01 & <0.01 & 0.07\\
-Latvia & 0.01 & 0.08 & 0.81 & 0.01 & 0.04 & 0.54 & <0.01 & 0.01 & 0.41\\
-\addlinespace
-Lithuania & 0.01 & 0.08 & 0.85 & 0.01 & 0.03 & 0.56 & <0.01 & 0.01 & 0.39\\
-Luxembourg & 0.01 & 0.05 & 0.4 & <0.01 & 0.01 & 0.21 & <0.01 & 0.01 & 0.09\\
-Malta & 0.01 & 0.05 & 0.4 & <0.01 & 0.02 & 0.23 & <0.01 & 0.01 & 0.13\\
-Montenegro & 0.03 & 0.11 & 0.92 & 0.01 & 0.03 & 0.51 & <0.01 & 0.01 & 0.29\\
-Netherlands & 0.01 & 0.04 & 0.43 & <0.01 & 0.01 & 0.2 & <0.01 & 0.01 & 0.12\\
-\addlinespace
-North Macedonia & 0.06 & 0.2 & 1.09 & 0.02 & 0.04 & 0.6 & <0.01 & 0.02 & 0.28\\
-Norway & 0.01 & 0.04 & 0.47 & <0.01 & 0.01 & 0.25 & <0.01 & 0.01 & 0.12\\
-Poland & 0.02 & 0.09 & 0.75 & 0.01 & 0.03 & 0.41 & <0.01 & 0.01 & 0.24\\
-Portugal & 0.04 & 0.13 & 0.56 & <0.01 & 0.01 & 0.21 & <0.01 & <0.01 & 0.1\\
-Republic of Moldova & 0.03 & 0.15 & 1.22 & 0.02 & 0.06 & 0.79 & <0.01 & 0.02 & 0.43\\
-\addlinespace
-Romania & 0.04 & 0.14 & 1.02 & 0.01 & 0.04 & 0.48 & <0.01 & 0.02 & 0.34\\
-Russian Federation & 0.02 & 0.1 & 0.96 & 0.01 & 0.05 & 0.63 & <0.01 & 0.02 & 0.53\\
-Serbia & 0.05 & 0.14 & 0.99 & 0.01 & 0.04 & 0.56 & <0.01 & 0.01 & 0.26\\
-Slovakia & 0.02 & 0.08 & 0.88 & 0.01 & 0.03 & 0.45 & <0.01 & 0.01 & 0.25\\
-Slovenia & 0.01 & 0.05 & 0.54 & <0.01 & 0.01 & 0.25 & <0.01 & 0.01 & 0.14\\
-\addlinespace
-Spain & 0.01 & 0.06 & 0.45 & <0.01 & 0.01 & 0.13 & <0.01 & <0.01 & 0.08\\
-Sweden & 0.01 & 0.03 & 0.4 & <0.01 & 0.01 & 0.21 & <0.01 & 0.01 & 0.11\\
-Switzerland & 0.01 & 0.04 & 0.34 & <0.01 & 0.01 & 0.15 & <0.01 & 0.01 & 0.08\\
-Ukraine & 0.02 & 0.08 & 0.99 & 0.01 & 0.04 & 0.64 & <0.01 & 0.02 & 0.46\\
-United Kingdom & 0.01 & 0.05 & 0.53 & <0.01 & 0.02 & 0.28 & <0.01 & 0.01 & 0.17\\
-\addlinespace
-United States of America & 0.02 & 0.06 & 0.64 & <0.01 & 0.03 & 0.48 & <0.01 & 0.02 & 0.31\\
-Latin America and the Caribbean & 0.08 (0.1) & 0.3 (0.3) & 1.66 (1.1) & 0.02 (0) & 0.08 (0.1) & 0.7 (0.5) & 0.01 (0) & 0.04 (0) & 0.43 (0.2)\\
-Antigua and Barbuda & 0.05 & 0.15 & 1.07 & 0.01 & 0.05 & 0.59 & <0.01 & 0.02 & 0.4\\
-Argentina & 0.04 & 0.18 & 1.11 & 0.02 & 0.07 & 0.68 & 0.01 & 0.03 & 0.41\\
-Aruba & 0.03 & 0.1 & 0.94 & 0.01 & 0.05 & 0.52 & <0.01 & 0.04 & 0.38\\
-\addlinespace
-Bahamas & 0.02 & 0.14 & 1.34 & 0.01 & 0.06 & 0.8 & <0.01 & 0.02 & 0.45\\
-Barbados & 0.04 & 0.12 & 0.78 & 0.01 & 0.04 & 0.4 & <0.01 & 0.03 & 0.29\\
-Belize & 0.14 & 0.49 & 2.49 & 0.04 & 0.14 & 1.2 & 0.01 & 0.05 & 0.55\\
-Bolivia (Plurinational State of) & 0.26 & 1.39 & 2.8 & 0.11 & 0.44 & 1.45 & 0.03 & 0.13 & 0.71\\
-Brazil & 0.11 & 0.46 & 1.55 & 0.03 & 0.11 & 0.67 & 0.01 & 0.03 & 0.35\\
-\addlinespace
-Chile & 0.08 & 0.22 & 0.91 & 0.01 & 0.04 & 0.42 & <0.01 & 0.01 & 0.21\\
-Colombia & 0.1 & 0.37 & 1.42 & 0.02 & 0.09 & 0.65 & 0.01 & 0.04 & 0.34\\
-Costa Rica & 0.08 & 0.23 & 1.05 & 0.01 & 0.05 & 0.5 & <0.01 & 0.02 & 0.25\\
-Cuba & 0.06 & 0.13 & 0.92 & 0.01 & 0.03 & 0.41 & <0.01 & 0.01 & 0.29\\
-curaçao & 0.03 & 0.11 & 0.84 & 0.01 & 0.05 & 0.5 & <0.01 & 0.02 & 0.28\\
-\addlinespace
-Dominican Republic & 0.19 & 0.6 & 2.08 & 0.05 & 0.16 & 0.99 & 0.02 & 0.08 & 0.61\\
-Ecuador & 0.16 & 0.63 & 1.81 & 0.04 & 0.14 & 0.75 & 0.01 & 0.05 & 0.42\\
-El Salvador & 0.21 & 0.86 & 2.31 & 0.04 & 0.15 & 0.94 & 0.01 & 0.05 & 0.48\\
-French Guiana & 0.07 & 0.24 & 1.09 & 0.02 & 0.08 & 0.71 & 0.01 & 0.03 & 0.38\\
-Grenada & 0.06 & 0.26 & 1.95 & 0.01 & 0.07 & 0.99 & 0.01 & 0.04 & 0.57\\
-\addlinespace
-Guadeloupe & 0.04 & 0.17 & 0.88 & 0.01 & 0.03 & 0.37 & <0.01 & 0.01 & 0.23\\
-Guatemala & 0.24 & 1.05 & 2.66 & 0.08 & 0.28 & 1.29 & 0.02 & 0.08 & 0.56\\
-Guyana & 0.09 & 0.42 & 2.23 & 0.04 & 0.2 & 1.31 & 0.02 & 0.11 & 0.94\\
-Haiti & 0.18 & 1.28 & 3.18 & 0.1 & 0.56 & 1.94 & 0.04 & 0.23 & 1.08\\
-Honduras & 0.25 & 0.97 & 2.58 & 0.06 & 0.23 & 1.21 & 0.01 & 0.06 & 0.52\\
-\addlinespace
-Jamaica & 0.08 & 0.24 & 1.78 & 0.02 & 0.08 & 0.88 & 0.01 & 0.04 & 0.51\\
-Martinique & 0.04 & 0.14 & 0.7 & 0.01 & 0.03 & 0.3 & <0.01 & 0.01 & 0.17\\
-Mexico & 0.13 & 0.47 & 2.02 & 0.03 & 0.1 & 0.82 & 0.01 & 0.04 & 0.47\\
-Nicaragua & 0.25 & 0.99 & 2.67 & 0.06 & 0.17 & 1 & 0.01 & 0.06 & 0.51\\
-Panama & 0.09 & 0.31 & 1.4 & 0.02 & 0.11 & 0.69 & 0.01 & 0.06 & 0.45\\
-\addlinespace
-Paraguay & 0.08 & 0.42 & 2.05 & 0.03 & 0.16 & 1.16 & 0.01 & 0.06 & 0.61\\
-Peru & 0.2 & 0.8 & 1.96 & 0.04 & 0.14 & 0.7 & 0.01 & 0.04 & 0.36\\
-Puerto Rico & 0.03 & 0.1 & 0.82 & 0.01 & 0.04 & 0.44 & <0.01 & 0.01 & 0.21\\
-Saint Lucia & 0.11 & 0.31 & 1.82 & 0.02 & 0.06 & 0.7 & 0.01 & 0.03 & 0.31\\
-Saint Vincent and the Grenadines & 0.14 & 0.4 & 2.24 & 0.02 & 0.08 & 0.93 & 0.01 & 0.04 & 0.55\\
-\addlinespace
-Suriname & 0.1 & 0.37 & 2.3 & 0.04 & 0.14 & 1.26 & 0.01 & 0.05 & 0.73\\
-Trinidad and Tobago & 0.05 & 0.21 & 1.47 & 0.02 & 0.08 & 0.68 & 0.01 & 0.05 & 0.47\\
-United States Virgin Islands & 0.06 & 0.16 & 1.15 & 0.01 & 0.04 & 0.45 & <0.01 & 0.02 & 0.25\\
-Uruguay & 0.03 & 0.15 & 0.95 & 0.01 & 0.05 & 0.57 & <0.01 & 0.02 & 0.36\\
-Venezuela (Bolivarian Republic of) & 0.08 & 0.29 & 1.94 & 0.02 & 0.1 & 1.03 & 0.02 & 0.08 & 0.67\\
-\addlinespace
-Northern Africa and Western Asia & 0.16 (0.1) & 0.7 (0.7) & 2.4 (1) & 0.02 (0) & 0.11 (0.1) & 0.74 (0.5) & 0 (0) & 0.03 (0) & 0.38 (0.3)\\
-Algeria & 0.25 & 1.09 & 2.52 & 0.02 & 0.13 & 0.62 & 0.01 & 0.06 & 0.39\\
-Armenia & 0.06 & 0.19 & 1.18 & 0.04 & 0.09 & 0.74 & <0.01 & 0.03 & 0.45\\
-Azerbaijan & 0.11 & 0.51 & 1.88 & 0.07 & 0.18 & 0.96 & 0.02 & 0.06 & 0.66\\
-Bahrain & 0.1 & 0.29 & 1.76 & 0.01 & 0.04 & 0.61 & <0.01 & 0.02 & 0.32\\
-\addlinespace
-Cyprus & 0.02 & 0.07 & 0.59 & <0.01 & 0.02 & 0.32 & <0.01 & 0.01 & 0.13\\
-Egypt & 0.32 & 1.18 & 3.03 & 0.06 & 0.19 & 1.36 & 0.01 & 0.07 & 0.9\\
-Georgia & 0.04 & 0.14 & 1.07 & 0.03 & 0.08 & 0.7 & 0.01 & 0.03 & 0.54\\
-Iraq & 0.16 & 0.76 & 3.35 & 0.04 & 0.24 & 1.75 & 0.02 & 0.11 & 1.12\\
-Israel & 0.02 & 0.09 & 0.72 & <0.01 & 0.03 & 0.37 & <0.01 & 0.01 & 0.21\\
-\addlinespace
-Jordan & 0.12 & 0.55 & 2.71 & 0.02 & 0.13 & 1.19 & 0.01 & 0.04 & 0.53\\
-Kuwait & 0.11 & 0.32 & 2.4 & 0.01 & 0.05 & 0.72 & <0.01 & 0.02 & 0.37\\
-Lebanon & 0.05 & 0.24 & 1.2 & 0.01 & 0.05 & 0.49 & <0.01 & 0.02 & 0.26\\
-Libya & 0.22 & 0.82 & 3.4 & 0.01 & 0.09 & 0.78 & <0.01 & 0.03 & 0.38\\
-Morocco & 0.23 & 0.98 & 2.16 & 0.03 & 0.14 & 0.55 & 0.01 & 0.04 & 0.3\\
-\addlinespace
-Oman & 0.22 & 0.99 & 2.5 & 0.03 & 0.11 & 0.85 & <0.01 & 0.02 & 0.32\\
-Qatar & 0.09 & 0.34 & 1.94 & 0.01 & 0.05 & 0.68 & <0.01 & 0.01 & 0.24\\
-Saudi Arabia & 0.23 & 0.85 & 2.7 & 0.02 & 0.11 & 1.04 & <0.01 & 0.02 & 0.35\\
-State of Palestine & 0.16 & 0.77 & 2.91 & 0.05 & 0.19 & 1.63 & 0.01 & 0.07 & 0.75\\
-Sudan & 0.21 & 1.38 & 4.03 & 0.12 & 0.65 & 2.52 & 0.04 & 0.29 & 1.65\\
-\addlinespace
-Syrian Arab Republic & 0.16 & 0.61 & 2.61 & 0.02 & 0.15 & 0.98 & 0.01 & 0.03 & 0.43\\
-Tunisia & 0.18 & 0.7 & 1.92 & 0.01 & 0.07 & 0.49 & <0.01 & 0.02 & 0.28\\
-Turkey & 0.26 & 0.93 & 1.92 & 0.05 & 0.15 & 0.62 & <0.01 & 0.03 & 0.28\\
-United Arab Emirates & 0.16 & 0.41 & 1.99 & 0.01 & 0.04 & 0.58 & <0.01 & 0.01 & 0.19\\
-Western Sahara & 0.33 & 1.39 & 3.24 & 0.06 & 0.25 & 1.12 & 0.01 & 0.07 & 0.53\\
-\addlinespace
-Yemen & 0.46 & 2.06 & 4.74 & 0.15 & 0.62 & 3.09 & 0.04 & 0.19 & 1.42\\
-Oceania (exc. AUS and NZ) & 0.09 (0) & 0.49 (0.3) & 2.58 (0.8) & 0.02 (0) & 0.14 (0.1) & 1.64 (0.8) & 0.01 (0) & 0.09 (0.1) & 1.02 (0.6)\\
-Fiji & 0.06 & 0.28 & 2.34 & 0.02 & 0.14 & 1.64 & 0.01 & 0.09 & 1.09\\
-French Polynesia & 0.1 & 0.34 & 1.62 & 0.01 & 0.04 & 0.59 & <0.01 & 0.01 & 0.3\\
-Guam & 0.06 & 0.21 & 1.07 & 0.02 & 0.06 & 0.56 & <0.01 & 0.02 & 0.28\\
-\addlinespace
-Kiribati & 0.11 & 0.76 & 2.58 & 0.06 & 0.36 & 1.72 & 0.02 & 0.17 & 1.02\\
-Micronesia (Fed. States of) & 0.09 & 0.53 & 3.49 & 0.04 & 0.25 & 2.09 & 0.01 & 0.1 & 1.13\\
-New Caledonia & 0.09 & 0.3 & 1.41 & 0.01 & 0.07 & 0.57 & <0.01 & 0.03 & 0.27\\
-Papua New Guinea & 0.15 & 0.83 & 3.38 & 0.07 & 0.41 & 2.37 & 0.03 & 0.18 & 1.53\\
-Samoa & 0.09 & 0.49 & 2.69 & 0.02 & 0.13 & 1.41 & 0.01 & 0.06 & 0.81\\
-\addlinespace
-Solomon Islands & 0.11 & 0.56 & 2.65 & 0.03 & 0.19 & 1.68 & 0.02 & 0.1 & 1.09\\
-Tonga & 0.04 & 0.25 & 2.48 & 0.01 & 0.11 & 1.6 & 0.01 & 0.06 & 1\\
-Vanuatu & 0.12 & 0.56 & 2.84 & 0.03 & 0.17 & 1.8 & 0.02 & 0.09 & 1.15\\
-Sub-Saharan Africa & 0.27 (0.2) & 1.69 (1) & 4.22 (0.9) & 0.18 (0.1) & 0.88 (0.6) & 2.66 (1.1) & 0.06 (0) & 0.26 (0.2) & 1.7 (0.8)\\
-Angola & 0.46 & 2.3 & 5.08 & 0.35 & 1.41 & 3.86 & 0.09 & 0.41 & 2.36\\
-\addlinespace
-Benin & 0.27 & 1.83 & 4.1 & 0.19 & 0.97 & 3.07 & 0.08 & 0.46 & 2.14\\
-Botswana & 0.16 & 0.7 & 3.08 & 0.05 & 0.29 & 1.57 & 0.02 & 0.11 & 0.99\\
-Burkina Faso & 0.41 & 2.18 & 4.59 & 0.24 & 1.2 & 3.29 & 0.08 & 0.37 & 1.96\\
-Burundi & 0.24 & 1.97 & 4.64 & 0.18 & 1.14 & 3.41 & 0.05 & 0.34 & 1.86\\
-Cabo Verde & 0.16 & 0.74 & 2.64 & 0.05 & 0.16 & 1.15 & 0.01 & 0.05 & 0.54\\
-\addlinespace
-Cameroon & 0.3 & 1.45 & 4.18 & 0.22 & 1.01 & 3.36 & 0.08 & 0.4 & 2.09\\
-Central African Republic & 0.34 & 1.59 & 4.34 & 0.21 & 1.17 & 3.54 & 0.12 & 0.55 & 2.44\\
-Chad & 0.38 & 2.06 & 4.79 & 0.32 & 1.67 & 4.62 & 0.15 & 0.76 & 2.92\\
-Comoros & 0.24 & 1.44 & 4.03 & 0.1 & 0.6 & 2.61 & 0.05 & 0.27 & 1.7\\
-Congo & 0.17 & 0.96 & 3.59 & 0.1 & 0.56 & 2.51 & 0.04 & 0.22 & 1.79\\
-\addlinespace
-côte d'ivoire & 0.38 & 1.74 & 5.09 & 0.18 & 0.96 & 3.45 & 0.08 & 0.42 & 2.33\\
-Democratic Republic of the Congo & 0.32 & 1.91 & 4.31 & 0.21 & 1.28 & 3.54 & 0.11 & 0.58 & 2.45\\
-Djibouti & 0.13 & 1.24 & 3.38 & 0.06 & 0.53 & 1.76 & 0.01 & 0.12 & 0.69\\
-Equatorial Guinea & 0.36 & 1.73 & 3.97 & 0.23 & 0.96 & 3.23 & 0.1 & 0.39 & 2.11\\
-Eritrea & 0.24 & 1.67 & 3.85 & 0.13 & 0.53 & 2.27 & 0.03 & 0.14 & 1.24\\
-\addlinespace
-Eswatini & 0.26 & 1.05 & 4.3 & 0.08 & 0.51 & 2.27 & 0.04 & 0.16 & 1.41\\
-Ethiopia & 0.28 & 2.09 & 4.15 & 0.21 & 0.91 & 2.61 & 0.04 & 0.19 & 1.14\\
-Gabon & 0.27 & 1.02 & 3.16 & 0.11 & 0.49 & 2.33 & 0.04 & 0.2 & 1.44\\
-Gambia & 0.43 & 1.83 & 4.17 & 0.17 & 0.86 & 3.24 & 0.05 & 0.34 & 2.04\\
-Ghana & 0.23 & 1.29 & 3.87 & 0.1 & 0.57 & 2.37 & 0.03 & 0.21 & 1.46\\
-\addlinespace
-Guinea & 0.42 & 2.1 & 4.26 & 0.27 & 1.13 & 3.31 & 0.08 & 0.35 & 1.95\\
-Guinea-Bissau & 0.31 & 2.03 & 4.66 & 0.23 & 1.07 & 3.36 & 0.07 & 0.36 & 2.01\\
-Kenya & 0.26 & 1.26 & 4.31 & 0.12 & 0.56 & 2.29 & 0.03 & 0.15 & 1.14\\
-Lesotho & 0.18 & 0.93 & 3.9 & 0.08 & 0.54 & 2.3 & 0.06 & 0.25 & 1.59\\
-Liberia & 0.41 & 2.12 & 4.37 & 0.3 & 1.02 & 2.87 & 0.07 & 0.28 & 1.68\\
-\addlinespace
-Madagascar & 0.31 & 1.71 & 3.98 & 0.17 & 0.63 & 2.27 & 0.04 & 0.17 & 1.27\\
-Malawi & 0.44 & 2.34 & 4.68 & 0.25 & 0.95 & 2.71 & 0.06 & 0.19 & 1.28\\
-Mali & 0.54 & 2.69 & 4.88 & 0.35 & 1.53 & 3.96 & 0.13 & 0.57 & 2.65\\
-Mauritania & 0.22 & 1.26 & 3.71 & 0.1 & 0.66 & 2.59 & 0.05 & 0.33 & 1.78\\
-Mauritius & 0.07 & 0.22 & 1.27 & 0.01 & 0.05 & 0.63 & <0.01 & 0.02 & 0.31\\
-\addlinespace
-Mayotte & 0.13 & 0.44 & 2.18 & 0.01 & 0.06 & 0.89 & <0.01 & 0.02 & 0.45\\
-Mozambique & 0.33 & 2.05 & 4.35 & 0.29 & 1.03 & 3.06 & 0.08 & 0.29 & 1.85\\
-Namibia & 0.16 & 0.86 & 3.64 & 0.06 & 0.34 & 1.88 & 0.03 & 0.14 & 1.28\\
-Niger & 0.51 & 2.96 & 5.23 & 0.44 & 1.69 & 4.08 & 0.12 & 0.51 & 2.68\\
-Nigeria & 0.34 & 1.95 & 4.66 & 0.24 & 1.37 & 3.83 & 0.1 & 0.61 & 2.68\\
-\addlinespace
-réunion & 0.06 & 0.2 & 0.95 & 0.01 & 0.03 & 0.45 & <0.01 & 0.01 & 0.27\\
-Rwanda & 0.25 & 2.75 & 4.8 & 0.31 & 0.91 & 2.14 & 0.02 & 0.12 & 0.9\\
-Sao Tome and Principe & 0.18 & 0.92 & 3.3 & 0.12 & 0.46 & 2.07 & 0.03 & 0.13 & 1.14\\
-Senegal & 0.41 & 1.88 & 4.07 & 0.14 & 0.67 & 2.29 & 0.03 & 0.17 & 1.26\\
-Seychelles & 0.1 & 0.29 & 2.05 & 0.01 & 0.06 & 0.8 & 0.01 & 0.04 & 0.6\\
-\addlinespace
-Sierra Leone & 0.49 & 2.56 & 4.99 & 0.33 & 1.46 & 3.63 & 0.1 & 0.45 & 2.07\\
-Somalia & 0.22 & 2.1 & 4.62 & 0.22 & 1.34 & 3.86 & 0.12 & 0.71 & 2.97\\
-South Africa & 0.14 & 0.64 & 2.92 & 0.04 & 0.24 & 1.51 & 0.02 & 0.09 & 1.04\\
-South Sudan & 0.44 & 2.49 & 4.94 & 0.25 & 1.17 & 3.51 & 0.07 & 0.49 & 2.38\\
-Togo & 0.28 & 1.54 & 4.3 & 0.14 & 0.8 & 2.89 & 0.06 & 0.33 & 1.89\\
-\addlinespace
-Uganda & 0.27 & 1.71 & 4.44 & 0.24 & 1.02 & 3.41 & 0.07 & 0.27 & 1.71\\
-United Republic of Tanzania & 0.28 & 1.59 & 3.99 & 0.19 & 0.75 & 2.57 & 0.06 & 0.25 & 1.61\\
-Zambia & 0.26 & 1.53 & 4.38 & 0.23 & 0.93 & 2.99 & 0.06 & 0.26 & 1.73\\
-Zimbabwe & 0.17 & 0.91 & 4.39 & 0.08 & 0.47 & 2.17 & 0.04 & 0.2 & 1.6\\*
+AUSTRALIA/NEW ZEALAND & 2.19 (0.1) & 2.03 (0.1) & 1.95 (0.1) & 1.92 (0) & 1.85 (0) & 1.77 (0)\\
+Australia & 2.07 & 1.95 & 1.89 & 1.89 & 1.83 & 1.77\\
+New Zealand & 2.3 & 2.1 & 2.01 & 1.94 & 1.87 & 1.78\\
+CENTRAL AND SOUTHERN ASIA & 4.02 (1.1) & 3.54 (1.1) & 2.82 (0.6) & 2.42 (0.4) & 2.17 (0.7) & 2.01 (0.7)\\
+Afghanistan & 4.07 & 5.14 & 5.38 & 4.92 & 3.93 & 3.09\\
+Bangladesh & 4.12 & 3.43 & 2.75 & 2.16 & 1.78 & 1.6\\
+Bhutan & 4.18 & 3.95 & 3.15 & 2.39 & 1.9 & 1.68\\
+India & 3.33 & 3.07 & 2.79 & 2.46 & 2.24 & 2.01\\
+Iran (Islamic Republic of) & 4.74 & 3.93 & 2.5 & 1.92 & 1.96 & 1.98\\
+Kazakhstan & 2.44 & 2.23 & 2.13 & 2.25 & 2.41 & 2.35\\
+Kyrgyzstan & 3.37 & 3.1 & 2.81 & 2.63 & 2.67 & 2.51\\
+Maldives & 5.1 & 4.84 & 3.4 & 2.19 & 1.86 & 1.69\\
+Nepal & 3.63 & 3.64 & 3.2 & 2.48 & 1.81 & 1.51\\
+Pakistan & 4.89 & 4.65 & 4.1 & 3.39 & 2.92 & 2.63\\
+Sri Lanka & 2.95 & 2.47 & 2.08 & 2.04 & 1.97 & 1.9\\
+Tajikistan & 4.64 & 4.4 & 3.58 & 2.96 & 2.85 & 2.82\\
+Turkmenistan & 3.97 & 3.36 & 2.7 & 2.45 & 2.47 & 2.29\\
+Uzbekistan & 3.9 & 3.29 & 2.83 & 2.33 & 2.11 & 2\\
+EASTERN AND SOUTH-EASTERN ASIA & 3.03 (1.5) & 2.74 (1.4) & 2.03 (1) & 1.81 (0.9) & 1.83 (0.7) & 1.75 (0.5)\\
+Brunei Darussalam & 4.08 & 3.21 & 2.33 & 1.91 & 1.78 & 1.64\\
+Cambodia & 3.73 & 3.88 & 3.28 & 2.41 & 2.08 & 1.93\\
+China & 2.68 & 2.03 & 1.75 & 1.62 & 1.67 & 1.73\\
+China, Hong Kong SAR & 2.19 & 1.45 & 1.1 & 1.22 & 1.45 & 1.56\\
+China, Macao SAR & 1.43 & 1.79 & 1.11 & 1.01 & 1.18 & 1.31\\
+China, Taiwan Province of China & 2.47 & 1.99 & 1.61 & 1.34 & 1.34 & 1.42\\
+Dem. People's Republic of Korea & 2.38 & 2.28 & 1.92 & 1.81 & 1.83 & 1.77\\
+Indonesia & 3.55 & 2.91 & 2.33 & 2.13 & 2.05 & 1.92\\
+Japan & 1.86 & 1.7 & 1.41 & 1.39 & 1.45 & 1.47\\
+Lao People's Democratic Republic & 4.39 & 4.31 & 3.54 & 2.72 & 2.27 & 2.03\\
+Malaysia & 3.91 & 3.38 & 2.75 & 2.15 & 1.89 & 1.75\\
+Mongolia & 4.08 & 3.24 & 2.39 & 2.38 & 2.55 & 2.43\\
+Myanmar & 3.83 & 3.01 & 2.39 & 2.08 & 1.86 & 1.75\\
+Philippines & 4.17 & 3.57 & 3.19 & 2.82 & 2.33 & 2.02\\
+Republic of Korea & 2.44 & 1.84 & 1.65 & 1.41 & 1.25 & 1.23\\
+Singapore & 2.07 & 1.74 & 1.52 & 1.29 & 1.22 & 1.23\\
+Thailand & 2.72 & 1.95 & 1.58 & 1.41 & 1.31 & 1.31\\
+Timor-Leste & 3.03 & 4.11 & 4.71 & 4.27 & 3.51 & 2.94\\
+Viet Nam & 3.88 & 2.74 & 2.03 & 1.73 & 2.02 & 2.17\\
+EUROPE AND NORTHERN AMERICA & 1.75 (0.3) & 1.7 (0.3) & 1.61 (0.3) & 1.53 (0.3) & 1.59 (0.2) & 1.63 (0.2)\\
+Albania & 3.32 & 2.66 & 2.17 & 1.7 & 1.53 & 1.43\\
+Austria & 1.61 & 1.5 & 1.48 & 1.51 & 1.59 & 1.65\\
+Belarus & 1.69 & 1.57 & 1.38 & 1.44 & 1.73 & 1.8\\
+Belgium & 1.64 & 1.65 & 1.7 & 1.84 & 1.77 & 1.67\\
+Bosnia and Herzegovina & 2 & 1.76 & 1.54 & 1.41 & 1.33 & 1.28\\
+Bulgaria & 1.73 & 1.58 & 1.39 & 1.39 & 1.52 & 1.63\\
+Canada & 1.73 & 1.64 & 1.63 & 1.63 & 1.57 & 1.53\\
+Channel Islands & 1.51 & 1.51 & 1.49 & 1.52 & 1.52 & 1.54\\
+Croatia & 1.63 & 1.69 & 1.59 & 1.58 & 1.55 & 1.5\\
+Czechia & 1.82 & 1.72 & 1.61 & 1.53 & 1.64 & 1.72\\
+Denmark & 1.71 & 1.71 & 1.82 & 1.8 & 1.74 & 1.7\\
+Estonia & 1.71 & 1.69 & 1.57 & 1.64 & 1.73 & 1.72\\
+Finland & 1.63 & 1.74 & 1.76 & 1.71 & 1.53 & 1.42\\
+France & 1.88 & 1.88 & 1.84 & 1.91 & 1.84 & 1.75\\
+Germany & 1.49 & 1.46 & 1.4 & 1.51 & 1.64 & 1.69\\
+Greece & 1.88 & 1.71 & 1.5 & 1.4 & 1.36 & 1.33\\
+Hungary & 1.67 & 1.69 & 1.6 & 1.41 & 1.42 & 1.52\\
+Iceland & 2.36 & 2.22 & 2.11 & 2.06 & 1.88 & 1.74\\
+Ireland & 2.8 & 2.26 & 2.01 & 1.94 & 1.86 & 1.75\\
+Italy & 1.72 & 1.53 & 1.41 & 1.4 & 1.38 & 1.38\\
+Latvia & 1.57 & 1.56 & 1.44 & 1.45 & 1.61 & 1.7\\
+Lithuania & 1.74 & 1.57 & 1.45 & 1.51 & 1.68 & 1.71\\
+Luxembourg & 1.54 & 1.58 & 1.72 & 1.69 & 1.48 & 1.42\\
+Malta & 1.9 & 1.88 & 1.66 & 1.52 & 1.55 & 1.61\\
+Montenegro & 2.17 & 1.95 & 1.87 & 1.83 & 1.82 & 1.78\\
+Netherlands & 1.75 & 1.72 & 1.68 & 1.69 & 1.66 & 1.67\\
+North Macedonia & 2.13 & 2 & 1.86 & 1.67 & 1.59 & 1.56\\
+Norway & 1.87 & 1.82 & 1.91 & 1.86 & 1.74 & 1.66\\
+Poland & 1.91 & 1.85 & 1.65 & 1.37 & 1.41 & 1.48\\
+Portugal & 1.92 & 1.67 & 1.54 & 1.41 & 1.41 & 1.46\\
+Republic of Moldova & 1.96 & 1.95 & 1.62 & 1.26 & 1.22 & 1.28\\
+Romania & 2.01 & 1.8 & 1.41 & 1.4 & 1.53 & 1.61\\
+Russian Federation & 1.57 & 1.46 & 1.29 & 1.42 & 1.71 & 1.79\\
+Serbia & 2 & 2 & 1.8 & 1.66 & 1.53 & 1.49\\
+Slovakia & 2.03 & 1.86 & 1.66 & 1.42 & 1.45 & 1.55\\
+Slovenia & 1.68 & 1.62 & 1.53 & 1.53 & 1.63 & 1.68\\
+Spain & 2.01 & 1.62 & 1.4 & 1.36 & 1.45 & 1.5\\
+Sweden & 1.79 & 1.87 & 1.86 & 1.83 & 1.82 & 1.78\\
+Switzerland & 1.63 & 1.62 & 1.56 & 1.57 & 1.62 & 1.63\\
+Ukraine & 1.55 & 1.43 & 1.27 & 1.26 & 1.37 & 1.43\\
+United Kingdom & 1.83 & 1.76 & 1.73 & 1.77 & 1.78 & 1.74\\
+United States of America & 1.7 & 1.69 & 1.82 & 1.87 & 1.83 & 1.8\\
+LATIN AMERICA AND THE CARIBBEAN & 3.34 (1.2) & 2.74 (0.9) & 2.32 (0.6) & 2.06 (0.5) & 1.88 (0.4) & 1.77 (0.4)\\
+Antigua and Barbuda & 2.2 & 1.92 & 1.9 & 1.85 & 1.79 & 1.78\\
+Argentina & 2.66 & 2.64 & 2.36 & 2.16 & 2.04 & 1.96\\
+Aruba & 2.25 & 2 & 1.73 & 1.7 & 1.95 & 2\\
+Bahamas & 2.51 & 2.39 & 2.04 & 1.76 & 1.63 & 1.58\\
+Barbados & 2.01 & 1.7 & 1.54 & 1.59 & 1.59 & 1.72\\
+Belize & 4.73 & 3.98 & 3.2 & 2.54 & 2.05 & 1.82\\
+Bolivia (Plurinational State of) & 3.71 & 3.55 & 3.19 & 2.78 & 2.4 & 2.15\\
+Brazil & 3.05 & 2.39 & 1.98 & 1.74 & 1.57 & 1.51\\
+Chile & 2.51 & 2.34 & 2.03 & 1.79 & 1.65 & 1.55\\
+Colombia & 3.16 & 2.57 & 2.19 & 1.87 & 1.63 & 1.52\\
+Costa Rica & 3.1 & 2.77 & 2.29 & 1.81 & 1.6 & 1.52\\
+Cuba & 2.06 & 1.61 & 1.5 & 1.42 & 1.43 & 1.4\\
+curaçao & 2.29 & 2.02 & 1.99 & 1.92 & 1.74 & 1.61\\
+Dominican Republic & 3.54 & 2.78 & 2.38 & 2.14 & 1.97 & 1.83\\
+Ecuador & 3.81 & 3.12 & 2.64 & 2.3 & 2.07 & 1.94\\
+El Salvador & 3.7 & 3.13 & 2.57 & 2.05 & 1.74 & 1.63\\
+French Guiana & 3.26 & 3.37 & 3.48 & 3.46 & 3.25 & 3.01\\
+Grenada & 3.73 & 3.27 & 2.6 & 2 & 1.83 & 1.72\\
+Guadeloupe & 2.91 & 2.22 & 2.09 & 2.06 & 2.01 & 1.93\\
+Guatemala & 4.74 & 4.39 & 3.83 & 3.17 & 2.55 & 2.24\\
+Guyana & 3.22 & 2.58 & 2.26 & 2.16 & 2.02 & 1.91\\
+Haiti & 4.14 & 3.85 & 3.32 & 2.82 & 2.41 & 2.16\\
+Honduras & 4.76 & 4.17 & 3.54 & 2.81 & 2.22 & 1.96\\
+Jamaica & 3.43 & 2.69 & 2.27 & 2.01 & 1.81 & 1.71\\
+Martinique & 2.5 & 1.96 & 1.88 & 1.9 & 1.84 & 1.76\\
+Mexico & 4.04 & 3.09 & 2.43 & 2.08 & 1.88 & 1.74\\
+Nicaragua & 4.5 & 3.75 & 2.91 & 2.34 & 2.08 & 1.93\\
+Panama & 3.32 & 2.75 & 2.38 & 2.22 & 2.12 & 2\\
+Paraguay & 4.11 & 3.66 & 3.07 & 2.45 & 2.08 & 1.92\\
+Peru & 3.91 & 3.2 & 2.64 & 2.29 & 2.05 & 1.89\\
+Puerto Rico & 2.25 & 1.98 & 1.7 & 1.52 & 1.24 & 1.1\\
+Saint Lucia & 3.98 & 3.28 & 2.36 & 1.5 & 1.25 & 1.2\\
+Saint Vincent and the Grenadines & 3.74 & 2.73 & 2.22 & 1.81 & 1.63 & 1.54\\
+Suriname & 3.53 & 2.77 & 2.54 & 2.41 & 2.16 & 2.01\\
+Trinidad and Tobago & 2.75 & 2.32 & 1.73 & 1.56 & 1.53 & 1.49\\
+United States Virgin Islands & 3.37 & 2.72 & 2.27 & 2.2 & 2.2 & 2.02\\
+Uruguay & 2.31 & 2.18 & 2 & 1.83 & 1.73 & 1.7\\
+Venezuela (Bolivarian Republic of) & 3.57 & 2.9 & 2.41 & 2.08 & 1.87 & 1.74\\
+NORTHERN AFRICA AND WESTERN ASIA & 4.6 (2.1) & 3.8 (1.7) & 2.91 (1.4) & 2.34 (1) & 2.18 (0.8) & 1.95 (0.6)\\
+Algeria & 5.36 & 4.29 & 2.91 & 2.6 & 2.63 & 2.41\\
+Armenia & 2.15 & 2.01 & 1.76 & 1.64 & 1.73 & 1.77\\
+Azerbaijan & 2.9 & 2.4 & 2.03 & 1.67 & 1.7 & 1.68\\
+Bahrain & 4.56 & 3.68 & 2.71 & 2.15 & 1.86 & 1.71\\
+Cyprus & 2.15 & 2.28 & 2.05 & 1.5 & 1.32 & 1.29\\
+Egypt & 4.12 & 3.8 & 3.23 & 2.91 & 2.89 & 2.71\\
+Georgia & 1.83 & 1.86 & 1.59 & 1.57 & 1.84 & 1.87\\
+Iraq & 5.88 & 5.03 & 4.1 & 3.51 & 3.21 & 2.82\\
+Israel & 3.13 & 3.06 & 2.97 & 2.97 & 2.97 & 2.82\\
+Jordan & 6.06 & 5.02 & 3.95 & 3.33 & 2.68 & 2.26\\
+Kuwait & 5.14 & 3.66 & 2.54 & 2.29 & 2.05 & 1.95\\
+Lebanon & 3.56 & 3.01 & 2.51 & 2.03 & 1.95 & 1.88\\
+Libya & 6.63 & 4.77 & 2.96 & 2.26 & 2 & 1.83\\
+Morocco & 4.6 & 3.62 & 2.68 & 2.34 & 2.2 & 2.04\\
+Oman & 6.01 & 5.74 & 4.11 & 3.08 & 2.64 & 2.3\\
+Qatar & 5.43 & 4.38 & 3.42 & 2.29 & 1.73 & 1.58\\
+Saudi Arabia & 5.62 & 5.18 & 4.01 & 2.96 & 2.24 & 1.93\\
+State of Palestine & 6.06 & 5.52 & 5.02 & 4.21 & 3.43 & 2.92\\
+Sudan & 5.15 & 4.61 & 4.07 & 4.1 & 3.96 & 3.6\\
+Syrian Arab Republic & 5.96 & 4.71 & 3.71 & 3.2 & 2.66 & 2.34\\
+Tunisia & 4.27 & 3.32 & 2.42 & 2.05 & 2.01 & 1.91\\
+Turkey & 3.4 & 2.81 & 2.35 & 2.2 & 2.07 & 1.95\\
+United Arab Emirates & 5.06 & 4.21 & 2.66 & 2 & 1.8 & 1.52\\
+Western Sahara & 4.21 & 3.63 & 2.89 & 2.41 & 2.18 & 1.99\\
+Yemen & 4.22 & 5.6 & 5.41 & 4.21 & 3.27 & 2.72\\
+OCEANIA (EXC. AUS AND NZ) & 4.39 (1.5) & 4.01 (1.3) & 3.7 (1.2) & 3.41 (1.1) & 3.07 (0.9) & 2.81 (0.8)\\
+Fiji & 3.25 & 3.01 & 2.87 & 2.59 & 2.48 & 2.36\\
+French Polynesia & 3.72 & 3.19 & 2.62 & 2.08 & 1.84 & 1.72\\
+Guam & 3.13 & 2.75 & 2.69 & 2.5 & 2.28 & 2.13\\
+Kiribati & 4.02 & 3.77 & 3.51 & 3.41 & 3.2 & 2.98\\
+Micronesia (Fed. States of) & 5.27 & 4.45 & 3.77 & 3.31 & 2.86 & 2.56\\
+New Caledonia & 3.41 & 2.97 & 2.57 & 2.23 & 1.99 & 1.84\\
+Papua New Guinea & 4.39 & 4.01 & 3.7 & 3.42 & 3.07 & 2.81\\
+Samoa & 5.52 & 4.58 & 4.09 & 4.06 & 3.63 & 3.29\\
+Solomon Islands & 5.21 & 5.08 & 4.44 & 3.94 & 3.66 & 3.41\\
+Tonga & 4.84 & 4.43 & 3.91 & 3.56 & 3.21 & 2.96\\
+Vanuatu & 4.73 & 4.39 & 4.06 & 3.74 & 3.39 & 3.15\\
+SUB-SAHARAN AFRICA & 4.45 (1) & 4.36 (0.6) & 4.26 (0.6) & 3.97 (0.7) & 3.6 (0.8) & 3.17 (0.8)\\
+Angola & 4.56 & 4.76 & 4.77 & 4.71 & 4.57 & 4.22\\
+Benin & 4.45 & 4.54 & 4.32 & 4.09 & 3.84 & 3.55\\
+Botswana & 4.45 & 3.6 & 2.9 & 2.6 & 2.44 & 2.27\\
+Burkina Faso & 3.93 & 4.57 & 4.56 & 4.45 & 4.24 & 3.87\\
+Burundi & 5.14 & 5.26 & 5.18 & 4.97 & 4.54 & 4.04\\
+Cabo Verde & 4.93 & 4.2 & 3.2 & 2.38 & 1.99 & 1.8\\
+Cameroon & 4.45 & 4.52 & 4.26 & 4.08 & 3.8 & 3.47\\
+Central African Republic & 3.72 & 3.96 & 3.91 & 3.73 & 3.52 & 3.18\\
+Chad & 4.32 & 4.75 & 5.04 & 4.91 & 4.44 & 3.91\\
+Comoros & 5.12 & 4.92 & 4.29 & 3.85 & 3.44 & 3.11\\
+Congo & 4.54 & 4.1 & 3.86 & 3.78 & 3.68 & 3.42\\
+côte d'ivoire & 4.34 & 4.9 & 4.35 & 3.98 & 3.7 & 3.42\\
+Democratic Republic of the Congo & 4.62 & 4.65 & 4.75 & 4.73 & 4.5 & 4.02\\
+Djibouti & 4.84 & 4.48 & 3.78 & 2.89 & 2.36 & 2.08\\
+Equatorial Guinea & 3.4 & 4.05 & 4.07 & 3.81 & 3.44 & 3.06\\
+Eritrea & 4.3 & 4.46 & 4.29 & 3.96 & 3.53 & 3.14\\
+Eswatini & 4.76 & 4.21 & 3.32 & 2.62 & 2.35 & 2.22\\
+Ethiopia & 4.47 & 4.8 & 4.76 & 4.32 & 3.61 & 3.04\\
+Gabon & 3.99 & 4.24 & 3.96 & 3.6 & 3.38 & 3.11\\
+Gambia & 3.59 & 4.38 & 4.8 & 4.72 & 4.46 & 4\\
+Ghana & 4.7 & 4.29 & 3.83 & 3.53 & 3.26 & 3\\
+Guinea & 3.58 & 4.06 & 4.3 & 4.18 & 3.83 & 3.42\\
+Guinea-Bissau & 4.16 & 4.45 & 4.27 & 3.98 & 3.66 & 3.27\\
+Kenya & 5.62 & 4.84 & 4.13 & 3.56 & 3.03 & 2.62\\
+Lesotho & 4.08 & 3.58 & 2.98 & 2.54 & 2.35 & 2.27\\
+Liberia & 4.09 & 4.21 & 3.96 & 3.85 & 3.55 & 3.13\\
+Madagascar & 4.67 & 4.45 & 4.09 & 3.84 & 3.48 & 3.17\\
+Malawi & 3.77 & 4.17 & 4.33 & 4.11 & 3.56 & 3.06\\
+Mali & 2.8 & 3.58 & 4.46 & 4.76 & 4.53 & 4.06\\
+Mauritania & 4.93 & 4.6 & 4.27 & 4.05 & 3.78 & 3.51\\
+Mauritius & 2.47 & 2.02 & 1.84 & 1.58 & 1.36 & 1.3\\
+Mayotte & 6.65 & 5.82 & 4.66 & 3.93 & 3.36 & 2.92\\
+Mozambique & 3.74 & 3.82 & 4.04 & 4.17 & 3.98 & 3.61\\
+Namibia & 4.76 & 4.05 & 3.3 & 2.95 & 2.84 & 2.66\\
+Niger & 3.96 & 4.34 & 4.85 & 5.51 & 5.55 & 5.1\\
+Nigeria & 3.97 & 4.29 & 4.31 & 4.27 & 4.15 & 3.82\\
+réunion & 2.8 & 2.41 & 2.27 & 2.13 & 2 & 1.88\\
+Rwanda & 4.87 & 4.23 & 3.91 & 3.94 & 3.58 & 3.11\\
+Sao Tome and Principe & 5.04 & 4.82 & 4.47 & 4.19 & 3.88 & 3.51\\
+Senegal & 4.81 & 4.86 & 4.5 & 4.3 & 4.09 & 3.71\\
+Seychelles & 3.64 & 2.59 & 2.06 & 1.98 & 2.03 & 1.99\\
+Sierra Leone & 2.68 & 3.43 & 3.7 & 3.58 & 3.25 & 2.83\\
+Somalia & 4.27 & 4.84 & 4.82 & 4.7 & 4.5 & 4.13\\
+South Africa & 3.65 & 3.1 & 2.43 & 2.07 & 1.97 & 1.88\\
+South Sudan & 3.29 & 3.96 & 4.21 & 4.04 & 3.72 & 3.33\\
+Togo & 4.79 & 4.47 & 4.06 & 3.78 & 3.47 & 3.17\\
+Uganda & 4.84 & 4.88 & 5.04 & 4.86 & 4.18 & 3.45\\
+United Republic of Tanzania & 4.64 & 4.48 & 4.37 & 4.29 & 4.07 & 3.73\\
+Zambia & 4.89 & 4.52 & 4.37 & 4.3 & 4 & 3.58\\
+Zimbabwe & 4.98 & 3.96 & 3.11 & 2.97 & 3.08 & 2.78\\*
 \end{longtable}
 \endgroup{}
