--- a/Output/tabS3.tex
+++ b/Output/tabS3.tex
@@ -1,7 +1,7 @@
 \begingroup\fontsize{7}{9}\selectfont
 
 \begin{longtable}[t]{llllllllll}
-\caption{\label{tab:S3}First difference of child death for a woman surviving to ages 20, 45, and 100 in three selected birth cohorts. 
+\caption{\label{tab:S3}First Difference of Child Death for a woman surviving to ages 20, 45, and 100 in three selected birth cohorts. 
 Regional estimates (capitalized) show the median value and IQR in parenthesis. 
 For reasons of space, 0 stands for <0.01 in the table.}\\
 \toprule
@@ -10,7 +10,7 @@ For reasons of space, 0 stands for <0.01 in the table.}\\
 Age & 25 & 70 & 99 & 25 & 70 & 99 & 25 & 70 & 99\\
 \midrule
 \endfirsthead
-\caption[]{First difference of child death for a woman surviving to ages 20, 45, and 100 in three selected birth cohort \textit{(continued)}}\\
+\caption[]{First Difference of Child Death for a woman surviving to ages 20, 45, and 100 in three selected birth cohort \textit{(continued)}}\\
 \toprule
 \multicolumn{1}{c}{Birth cohort} & \multicolumn{3}{c}{1950} & \multicolumn{3}{c}{1975} & \multicolumn{3}{c}{1999} \\
 \cmidrule(l{3pt}r{3pt}){1-1} \cmidrule(l{3pt}r{3pt}){2-4} \cmidrule(l{3pt}r{3pt}){5-7} \cmidrule(l{3pt}r{3pt}){8-10}
