--- a/Output/tabS4.tex
+++ b/Output/tabS4.tex
@@ -1,10 +1,10 @@
 \begingroup\fontsize{5}{7}\selectfont
 
 \begin{longtable}[t]{llllllllll}
-\caption{\label{tab:S4}Child deaths experienced by women in birth cohort c at exact age a. 
+\caption{\label{tab:S4}Burden of Child Death (BCD): child deaths experienced by women in birth cohort c at exact age a. 
 Obtained by weighting the first difference of child death by the life table distribution of women. 
 Regional estimates (capitalized) show the median value and IQR in parenthesis. 
-Estimates in in hundreds of thsousands.
+Estimates in hundreds of thsousands.
 For reasons of space, 0 stands for <0.01 in the table.}\\
 \toprule
 \multicolumn{1}{c}{Birth cohort} & \multicolumn{3}{c}{1950} & \multicolumn{3}{c}{1975} & \multicolumn{3}{c}{1999} \\
@@ -12,7 +12,7 @@ For reasons of space, 0 stands for <0.01 in the table.}\\
 Age & 25 & 70 & 99 & 25 & 70 & 99 & 25 & 70 & 99\\
 \midrule
 \endfirsthead
-\caption[]{Child deaths experienced by women in birth cohort c at exact age  \textit{(continued)}}\\
+\caption[]{Burden of Child Death (BCD): child deaths experienced by women in birth cohort c at exact age  \textit{(continued)}}\\
 \toprule
 \multicolumn{1}{c}{Birth cohort} & \multicolumn{3}{c}{1950} & \multicolumn{3}{c}{1975} & \multicolumn{3}{c}{1999} \\
 \cmidrule(l{3pt}r{3pt}){1-1} \cmidrule(l{3pt}r{3pt}){2-4} \cmidrule(l{3pt}r{3pt}){5-7} \cmidrule(l{3pt}r{3pt}){8-10}
